Updated rishi in Mandala 9

--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format1/RVS-Devanagari-F1-M09.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format1/RVS-Devanagari-F1-M09.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| श्री॒ गु॒रु॒भ्यो॒ न॒मः॒ हरिः ॐ ||</h1>
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (मंडल: 09) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{अष्टक,अध्याय,वर्ग,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 13-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{मंडल,सूक्त,मंत्र}{मंडल,अनुवाक,सूक्त,मंत्र}{अष्टक,अध्याय,वर्ग,मंत्र}{ऋक्संहित सूक्त संख्या,ऋक्संहित मन्त्र संख्या}<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1950,55 +1950,55 @@
 <td class='VargaStyle1'>त्वं सो᳚मासि धार॒युर्म॒न्द्र ओजि॑ष्ठो, अध्व॒रे |<span class='RishiDevChandas'>{भरद्वाजः | पवमानः सोमः | गायत्री}</span><p>पव॑स्व मंह॒यद्र॑यिः ||<span class='MantraNumbering'>{1/32}{9.67.1}{9.3.7.1}{7.2.13.1}{790, 8269}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>त्वं सु॒तो नृ॒माद॑नो दध॒न्वान्‌ म॑त्स॒रिन्त॑मः |<span class='RishiDevChandas'>{कश्यपः | पवमानः सोमः | गायत्री}</span><p>इन्द्रा᳚य सू॒रिरन्ध॑सा ||<span class='MantraNumbering'>{2/32}{9.67.2}{9.3.7.2}{7.2.13.2}{790, 8270}</span></td>
+<td class='VargaStyle1'>त्वं सु॒तो नृ॒माद॑नो दध॒न्वान्‌ म॑त्स॒रिन्त॑मः |<span class='RishiDevChandas'>{भरद्वाजः | पवमानः सोमः | गायत्री}</span><p>इन्द्रा᳚य सू॒रिरन्ध॑सा ||<span class='MantraNumbering'>{2/32}{9.67.2}{9.3.7.2}{7.2.13.2}{790, 8270}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>त्वं सु॑ष्वा॒णो, अद्रि॑भिर॒भ्य॑र्ष॒ कनि॑क्रदत् |<span class='RishiDevChandas'>{गोतमः | पवमानः सोमः | गायत्री}</span><p>द्यु॒मन्तं॒ शुष्म॑मुत्त॒मम् ||<span class='MantraNumbering'>{3/32}{9.67.3}{9.3.7.3}{7.2.13.3}{790, 8271}</span></td>
+<td class='VargaStyle1'>त्वं सु॑ष्वा॒णो, अद्रि॑भिर॒भ्य॑र्ष॒ कनि॑क्रदत् |<span class='RishiDevChandas'>{भरद्वाजः | पवमानः सोमः | गायत्री}</span><p>द्यु॒मन्तं॒ शुष्म॑मुत्त॒मम् ||<span class='MantraNumbering'>{3/32}{9.67.3}{9.3.7.3}{7.2.13.3}{790, 8271}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>इन्दु᳚र्हिन्वा॒नो, अ॑र्षति ति॒रो वारा᳚ण्य॒व्यया᳚ |<span class='RishiDevChandas'>{अत्रिः | पवमानः सोमः | गायत्री}</span><p>हरि॒र्वाज॑मचिक्रदत् ||<span class='MantraNumbering'>{4/32}{9.67.4}{9.3.7.4}{7.2.13.4}{790, 8272}</span></td>
+<td class='VargaStyle1'>इन्दु᳚र्हिन्वा॒नो, अ॑र्षति ति॒रो वारा᳚ण्य॒व्यया᳚ |<span class='RishiDevChandas'>{कश्यपः | पवमानः सोमः | गायत्री}</span><p>हरि॒र्वाज॑मचिक्रदत् ||<span class='MantraNumbering'>{4/32}{9.67.4}{9.3.7.4}{7.2.13.4}{790, 8272}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>इन्दो॒ व्यव्य॑मर्षसि॒ वि श्रवां᳚सि॒ वि सौभ॑गा |<span class='RishiDevChandas'>{विश्वामित्रः | पवमानः सोमः | गायत्री}</span><p>वि वाजा᳚न्‌ त्सोम॒ गोम॑तः ||<span class='MantraNumbering'>{5/32}{9.67.5}{9.3.7.5}{7.2.13.5}{790, 8273}</span></td>
+<td class='VargaStyle1'>इन्दो॒ व्यव्य॑मर्षसि॒ वि श्रवां᳚सि॒ वि सौभ॑गा |<span class='RishiDevChandas'>{कश्यपः | पवमानः सोमः | गायत्री}</span><p>वि वाजा᳚न्‌ त्सोम॒ गोम॑तः ||<span class='MantraNumbering'>{5/32}{9.67.5}{9.3.7.5}{7.2.13.5}{790, 8273}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>आ न॑ इन्दो शत॒ग्विनं᳚ र॒यिं गोम᳚न्तम॒श्विन᳚म् |<span class='RishiDevChandas'>{जमदग्निः | पवमानः सोमः | गायत्री}</span><p>भरा᳚ सोम सह॒स्रिण᳚म् ||<span class='MantraNumbering'>{6/32}{9.67.6}{9.3.7.6}{7.2.14.1}{790, 8274}</span></td>
+<td class='VargaStyle2'>आ न॑ इन्दो शत॒ग्विनं᳚ र॒यिं गोम᳚न्तम॒श्विन᳚म् |<span class='RishiDevChandas'>{कश्यपः | पवमानः सोमः | गायत्री}</span><p>भरा᳚ सोम सह॒स्रिण᳚म् ||<span class='MantraNumbering'>{6/32}{9.67.6}{9.3.7.6}{7.2.14.1}{790, 8274}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>पव॑मानास॒ इन्द॑वस्ति॒रः प॒वित्र॑मा॒शवः॑ |<span class='RishiDevChandas'>{वसिष्ठः | पवमानः सोमः | गायत्री}</span><p>इन्द्रं॒ यामे᳚भिराशत ||<span class='MantraNumbering'>{7/32}{9.67.7}{9.3.7.7}{7.2.14.2}{790, 8275}</span></td>
+<td class='VargaStyle2'>पव॑मानास॒ इन्द॑वस्ति॒रः प॒वित्र॑मा॒शवः॑ |<span class='RishiDevChandas'>{गोतमः | पवमानः सोमः | गायत्री}</span><p>इन्द्रं॒ यामे᳚भिराशत ||<span class='MantraNumbering'>{7/32}{9.67.7}{9.3.7.7}{7.2.14.2}{790, 8275}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>क॒कु॒हः सो॒म्यो रस॒ इन्दु॒रिन्द्रा᳚य पू॒र्व्यः |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>आ॒युः प॑वत आ॒यवे᳚ ||<span class='MantraNumbering'>{8/32}{9.67.8}{9.3.7.8}{7.2.14.3}{790, 8276}</span></td>
+<td class='VargaStyle2'>क॒कु॒हः सो॒म्यो रस॒ इन्दु॒रिन्द्रा᳚य पू॒र्व्यः |<span class='RishiDevChandas'>{गोतमः | पवमानः सोमः | गायत्री}</span><p>आ॒युः प॑वत आ॒यवे᳚ ||<span class='MantraNumbering'>{8/32}{9.67.8}{9.3.7.8}{7.2.14.3}{790, 8276}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>हि॒न्वन्ति॒ सूर॒मुस्र॑यः॒ पव॑मानं मधु॒श्चुत᳚म् |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>अ॒भि गि॒रा सम॑स्वरन् ||<span class='MantraNumbering'>{9/32}{9.67.9}{9.3.7.9}{7.2.14.4}{790, 8277}</span></td>
+<td class='VargaStyle2'>हि॒न्वन्ति॒ सूर॒मुस्र॑यः॒ पव॑मानं मधु॒श्चुत᳚म् |<span class='RishiDevChandas'>{गोतमः | पवमानः सोमः | गायत्री}</span><p>अ॒भि गि॒रा सम॑स्वरन् ||<span class='MantraNumbering'>{9/32}{9.67.9}{9.3.7.9}{7.2.14.4}{790, 8277}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>अ॒वि॒ता नो᳚, अ॒जाश्वः॑ पू॒षा याम॑नियामनि |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आ भ॑क्षत्‌ क॒न्या᳚सु नः ||<span class='MantraNumbering'>{10/32}{9.67.10}{9.3.7.10}{7.2.14.5}{790, 8278}</span></td>
+<td class='VargaStyle2'>अ॒वि॒ता नो᳚, अ॒जाश्वः॑ पू॒षा याम॑नियामनि |<span class='RishiDevChandas'>{अत्रिः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आ भ॑क्षत्‌ क॒न्या᳚सु नः ||<span class='MantraNumbering'>{10/32}{9.67.10}{9.3.7.10}{7.2.14.5}{790, 8278}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>अ॒यं सोमः॑ कप॒र्दिने᳚ घृ॒तं न प॑वते॒ मधु॑ |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आ भ॑क्षत्‌ क॒न्या᳚सु नः ||<span class='MantraNumbering'>{11/32}{9.67.11}{9.3.7.11}{7.2.15.1}{790, 8279}</span></td>
+<td class='VargaStyle1'>अ॒यं सोमः॑ कप॒र्दिने᳚ घृ॒तं न प॑वते॒ मधु॑ |<span class='RishiDevChandas'>{अत्रिः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आ भ॑क्षत्‌ क॒न्या᳚सु नः ||<span class='MantraNumbering'>{11/32}{9.67.11}{9.3.7.11}{7.2.15.1}{790, 8279}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>अ॒यं त॑ आघृणे सु॒तो घृ॒तं न प॑वते॒ शुचि॑ |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आ भ॑क्षत्‌ क॒न्या᳚सु नः ||<span class='MantraNumbering'>{12/32}{9.67.12}{9.3.7.12}{7.2.15.2}{790, 8280}</span></td>
+<td class='VargaStyle1'>अ॒यं त॑ आघृणे सु॒तो घृ॒तं न प॑वते॒ शुचि॑ |<span class='RishiDevChandas'>{अत्रिः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आ भ॑क्षत्‌ क॒न्या᳚सु नः ||<span class='MantraNumbering'>{12/32}{9.67.12}{9.3.7.12}{7.2.15.2}{790, 8280}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>वा॒चो ज॒न्तुः क॑वी॒नां पव॑स्व सोम॒ धार॑या |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>दे॒वेषु॑ रत्न॒धा, अ॑सि ||<span class='MantraNumbering'>{13/32}{9.67.13}{9.3.7.13}{7.2.15.3}{790, 8281}</span></td>
+<td class='VargaStyle1'>वा॒चो ज॒न्तुः क॑वी॒नां पव॑स्व सोम॒ धार॑या |<span class='RishiDevChandas'>{विश्वामित्रः | पवमानः सोमः | गायत्री}</span><p>दे॒वेषु॑ रत्न॒धा, अ॑सि ||<span class='MantraNumbering'>{13/32}{9.67.13}{9.3.7.13}{7.2.15.3}{790, 8281}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आ क॒लशे᳚षु धावति श्ये॒नो वर्म॒ वि गा᳚हते |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>अ॒भि द्रोणा॒ कनि॑क्रदत् ||<span class='MantraNumbering'>{14/32}{9.67.14}{9.3.7.14}{7.2.15.4}{790, 8282}</span></td>
+<td class='VargaStyle1'>आ क॒लशे᳚षु धावति श्ये॒नो वर्म॒ वि गा᳚हते |<span class='RishiDevChandas'>{विश्वामित्रः | पवमानः सोमः | गायत्री}</span><p>अ॒भि द्रोणा॒ कनि॑क्रदत् ||<span class='MantraNumbering'>{14/32}{9.67.14}{9.3.7.14}{7.2.15.4}{790, 8282}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>परि॒ प्र सो᳚म ते॒ रसोऽस॑र्जि क॒लशे᳚ सु॒तः |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>श्ये॒नो न त॒क्तो, अ॑र्षति ||<span class='MantraNumbering'>{15/32}{9.67.15}{9.3.7.15}{7.2.15.5}{790, 8283}</span></td>
+<td class='VargaStyle1'>परि॒ प्र सो᳚म ते॒ रसोऽस॑र्जि क॒लशे᳚ सु॒तः |<span class='RishiDevChandas'>{विश्वामित्रः | पवमानः सोमः | गायत्री}</span><p>श्ये॒नो न त॒क्तो, अ॑र्षति ||<span class='MantraNumbering'>{15/32}{9.67.15}{9.3.7.15}{7.2.15.5}{790, 8283}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>पव॑स्व सोम म॒न्दय॒न्निन्द्रा᳚य॒ मधु॑मत्तमः ||<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | द्विपदा गायत्री}</span><span class='MantraNumbering'>{16/32}{9.67.16}{9.3.7.16}{7.2.16.1}{790, 8284}</span></td>
+<td class='VargaStyle2'>पव॑स्व सोम म॒न्दय॒न्निन्द्रा᳚य॒ मधु॑मत्तमः ||<span class='RishiDevChandas'>{जमदग्निः | पवमानः सोमः | द्विपदा गायत्री}</span><span class='MantraNumbering'>{16/32}{9.67.16}{9.3.7.16}{7.2.16.1}{790, 8284}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>असृ॑ग्रन्‌ दे॒ववी᳚तये वाज॒यन्तो॒ रथा᳚, इव ||<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | द्विपदा गायत्री}</span><span class='MantraNumbering'>{17/32}{9.67.17}{9.3.7.17}{7.2.16.2}{790, 8285}</span></td>
+<td class='VargaStyle2'>असृ॑ग्रन्‌ दे॒ववी᳚तये वाज॒यन्तो॒ रथा᳚, इव ||<span class='RishiDevChandas'>{जमदग्निः | पवमानः सोमः | द्विपदा गायत्री}</span><span class='MantraNumbering'>{17/32}{9.67.17}{9.3.7.17}{7.2.16.2}{790, 8285}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ते सु॒तासो᳚ म॒दिन्त॑माः शु॒क्रा वा॒युम॑सृक्षत ||<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | द्विपदा गायत्री}</span><span class='MantraNumbering'>{18/32}{9.67.18}{9.3.7.18}{7.2.16.3}{790, 8286}</span></td>
+<td class='VargaStyle2'>ते सु॒तासो᳚ म॒दिन्त॑माः शु॒क्रा वा॒युम॑सृक्षत ||<span class='RishiDevChandas'>{जमदग्निः | पवमानः सोमः | द्विपदा गायत्री}</span><span class='MantraNumbering'>{18/32}{9.67.18}{9.3.7.18}{7.2.16.3}{790, 8286}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ग्राव्णा᳚ तु॒न्नो, अ॒भिष्टु॑तः प॒वित्रं᳚ सोम गच्छसि |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>दध॑त्‌ स्तो॒त्रे सु॒वीर्य᳚म् ||<span class='MantraNumbering'>{19/32}{9.67.19}{9.3.7.19}{7.2.16.4}{790, 8287}</span></td>
