--- a/Rigveda/SamhitaPatha/Devanagari/Mandala/Format4/RVS-Devanagari-F4-M09.html
+++ b/Rigveda/SamhitaPatha/Devanagari/Mandala/Format4/RVS-Devanagari-F4-M09.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ऋग्वेद संहिता (मंडल: 09) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 13-Nov-2024]</h6>
+<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -2019,55 +2019,55 @@
 <td class='VargaStyle1'>त्वंसो᳚मासिधार॒युर्म॒न्द्रओजि॑ष्ठो,अध्व॒रे |<span class='RishiDevChandas'>{भरद्वाजः | पवमानः सोमः | गायत्री}</span><p>पव॑स्वमंह॒यद्र॑यिः॒(स्वाहा᳚) || 1 || <span class='MantraNumbering'>वर्ग:13</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>त्वंसु॒तोनृ॒माद॑नोदध॒न्वान्‌म॑त्स॒रिन्त॑मः |<span class='RishiDevChandas'>{कश्यपः | पवमानः सोमः | गायत्री}</span><p>इन्द्रा᳚यसू॒रिरन्ध॑सा॒(स्वाहा᳚) || 2 || </td>
+<td class='VargaStyle1'>त्वंसु॒तोनृ॒माद॑नोदध॒न्वान्‌म॑त्स॒रिन्त॑मः |<span class='RishiDevChandas'>{भरद्वाजः | पवमानः सोमः | गायत्री}</span><p>इन्द्रा᳚यसू॒रिरन्ध॑सा॒(स्वाहा᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>त्वंसु॑ष्वा॒णो,अद्रि॑भिर॒भ्य॑र्ष॒कनि॑क्रदत् |<span class='RishiDevChandas'>{गोतमः | पवमानः सोमः | गायत्री}</span><p>द्यु॒मन्तं॒शुष्म॑मुत्त॒मम्(स्वाहा᳚) || 3 || </td>
+<td class='VargaStyle1'>त्वंसु॑ष्वा॒णो,अद्रि॑भिर॒भ्य॑र्ष॒कनि॑क्रदत् |<span class='RishiDevChandas'>{भरद्वाजः | पवमानः सोमः | गायत्री}</span><p>द्यु॒मन्तं॒शुष्म॑मुत्त॒मम्(स्वाहा᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>इन्दु᳚र्हिन्वा॒नो,अ॑र्षतिति॒रोवारा᳚ण्य॒व्यया᳚ |<span class='RishiDevChandas'>{अत्रिः | पवमानः सोमः | गायत्री}</span><p>हरि॒र्वाज॑मचिक्रद॒‌त्(स्वाहा᳚) || 4 || </td>
+<td class='VargaStyle1'>इन्दु᳚र्हिन्वा॒नो,अ॑र्षतिति॒रोवारा᳚ण्य॒व्यया᳚ |<span class='RishiDevChandas'>{कश्यपः | पवमानः सोमः | गायत्री}</span><p>हरि॒र्वाज॑मचिक्रद॒‌त्(स्वाहा᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>इन्दो॒व्यव्य॑मर्षसि॒विश्रवां᳚सि॒विसौभ॑गा |<span class='RishiDevChandas'>{विश्वामित्रः | पवमानः सोमः | गायत्री}</span><p>विवाजा᳚न्‌त्सोम॒गोम॑तः॒(स्वाहा᳚) || 5 || </td>
+<td class='VargaStyle1'>इन्दो॒व्यव्य॑मर्षसि॒विश्रवां᳚सि॒विसौभ॑गा |<span class='RishiDevChandas'>{कश्यपः | पवमानः सोमः | गायत्री}</span><p>विवाजा᳚न्‌त्सोम॒गोम॑तः॒(स्वाहा᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>आन॑इन्दोशत॒ग्विनं᳚र॒यिंगोम᳚न्तम॒श्विन᳚म् |<span class='RishiDevChandas'>{जमदग्निः | पवमानः सोमः | गायत्री}</span><p>भरा᳚सोमसह॒स्रिण॒‌म्(स्वाहा᳚) || 6 || <span class='MantraNumbering'>वर्ग:14</span></td>
+<td class='VargaStyle2'>आन॑इन्दोशत॒ग्विनं᳚र॒यिंगोम᳚न्तम॒श्विन᳚म् |<span class='RishiDevChandas'>{कश्यपः | पवमानः सोमः | गायत्री}</span><p>भरा᳚सोमसह॒स्रिण॒‌म्(स्वाहा᳚) || 6 || <span class='MantraNumbering'>वर्ग:14</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>पव॑मानास॒इन्द॑वस्ति॒रःप॒वित्र॑मा॒शवः॑ |<span class='RishiDevChandas'>{वसिष्ठः | पवमानः सोमः | गायत्री}</span><p>इन्द्रं॒यामे᳚भिराशत॒(स्वाहा᳚) || 7 || </td>
+<td class='VargaStyle2'>पव॑मानास॒इन्द॑वस्ति॒रःप॒वित्र॑मा॒शवः॑ |<span class='RishiDevChandas'>{गोतमः | पवमानः सोमः | गायत्री}</span><p>इन्द्रं॒यामे᳚भिराशत॒(स्वाहा᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>क॒कु॒हःसो॒म्योरस॒इन्दु॒रिन्द्रा᳚यपू॒र्व्यः |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>आ॒युःप॑वतआ॒यवे॒(स्वाहा᳚) || 8 || </td>
+<td class='VargaStyle2'>क॒कु॒हःसो॒म्योरस॒इन्दु॒रिन्द्रा᳚यपू॒र्व्यः |<span class='RishiDevChandas'>{गोतमः | पवमानः सोमः | गायत्री}</span><p>आ॒युःप॑वतआ॒यवे॒(स्वाहा᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>हि॒न्वन्ति॒सूर॒मुस्र॑यः॒पव॑मानंमधु॒श्चुत᳚म् |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>अ॒भिगि॒रासम॑स्वर॒‌न्(स्वाहा᳚) || 9 || </td>
+<td class='VargaStyle2'>हि॒न्वन्ति॒सूर॒मुस्र॑यः॒पव॑मानंमधु॒श्चुत᳚म् |<span class='RishiDevChandas'>{गोतमः | पवमानः सोमः | गायत्री}</span><p>अ॒भिगि॒रासम॑स्वर॒‌न्(स्वाहा᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>अ॒वि॒तानो᳚,अ॒जाश्वः॑पू॒षायाम॑नियामनि |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आभ॑क्षत्‌क॒न्या᳚सुनः॒(स्वाहा᳚) || 10 || </td>
+<td class='VargaStyle2'>अ॒वि॒तानो᳚,अ॒जाश्वः॑पू॒षायाम॑नियामनि |<span class='RishiDevChandas'>{अत्रिः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आभ॑क्षत्‌क॒न्या᳚सुनः॒(स्वाहा᳚) || 10 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>अ॒यंसोमः॑कप॒र्दिने᳚घृ॒तंनप॑वते॒मधु॑ |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आभ॑क्षत्‌क॒न्या᳚सुनः॒(स्वाहा᳚) || 11 || <span class='MantraNumbering'>वर्ग:15</span></td>
+<td class='VargaStyle1'>अ॒यंसोमः॑कप॒र्दिने᳚घृ॒तंनप॑वते॒मधु॑ |<span class='RishiDevChandas'>{अत्रिः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आभ॑क्षत्‌क॒न्या᳚सुनः॒(स्वाहा᳚) || 11 || <span class='MantraNumbering'>वर्ग:15</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>अ॒यंत॑आघृणेसु॒तोघृ॒तंनप॑वते॒शुचि॑ |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आभ॑क्षत्‌क॒न्या᳚सुनः॒(स्वाहा᳚) || 12 || </td>
+<td class='VargaStyle1'>अ॒यंत॑आघृणेसु॒तोघृ॒तंनप॑वते॒शुचि॑ |<span class='RishiDevChandas'>{अत्रिः | पवमानः सोमः पूषा वा | गायत्री}</span><p>आभ॑क्षत्‌क॒न्या᳚सुनः॒(स्वाहा᳚) || 12 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>वा॒चोज॒न्तुःक॑वी॒नांपव॑स्वसोम॒धार॑या |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>दे॒वेषु॑रत्न॒धा,अ॑सि॒(स्वाहा᳚) || 13 || </td>
+<td class='VargaStyle1'>वा॒चोज॒न्तुःक॑वी॒नांपव॑स्वसोम॒धार॑या |<span class='RishiDevChandas'>{विश्वामित्रः | पवमानः सोमः | गायत्री}</span><p>दे॒वेषु॑रत्न॒धा,अ॑सि॒(स्वाहा᳚) || 13 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>आक॒लशे᳚षुधावतिश्ये॒नोवर्म॒विगा᳚हते |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>अ॒भिद्रोणा॒कनि॑क्रद॒‌त्(स्वाहा᳚) || 14 || </td>
+<td class='VargaStyle1'>आक॒लशे᳚षुधावतिश्ये॒नोवर्म॒विगा᳚हते |<span class='RishiDevChandas'>{विश्वामित्रः | पवमानः सोमः | गायत्री}</span><p>अ॒भिद्रोणा॒कनि॑क्रद॒‌त्(स्वाहा᳚) || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>परि॒प्रसो᳚मते॒रसोऽस॑र्जिक॒लशे᳚सु॒तः |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>श्ये॒नोनत॒क्तो,अ॑र्षति॒(स्वाहा᳚) || 15 || </td>
+<td class='VargaStyle1'>परि॒प्रसो᳚मते॒रसोऽस॑र्जिक॒लशे᳚सु॒तः |<span class='RishiDevChandas'>{विश्वामित्रः | पवमानः सोमः | गायत्री}</span><p>श्ये॒नोनत॒क्तो,अ॑र्षति॒(स्वाहा᳚) || 15 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>पव॑स्वसोमम॒न्दय॒न्निन्द्रा᳚य॒मधु॑मत्तमः॒(स्वाहा᳚) || <span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | द्विपदा गायत्री}</span>16 || <span class='MantraNumbering'>वर्ग:16</span></td>
+<td class='VargaStyle2'>पव॑स्वसोमम॒न्दय॒न्निन्द्रा᳚य॒मधु॑मत्तमः॒(स्वाहा᳚) || <span class='RishiDevChandas'>{जमदग्निः | पवमानः सोमः | द्विपदा गायत्री}</span>16 || <span class='MantraNumbering'>वर्ग:16</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>असृ॑ग्रन्‌दे॒ववी᳚तयेवाज॒यन्तो॒रथा᳚,इव॒(स्वाहा᳚) || <span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | द्विपदा गायत्री}</span>17 || </td>
+<td class='VargaStyle2'>असृ॑ग्रन्‌दे॒ववी᳚तयेवाज॒यन्तो॒रथा᳚,इव॒(स्वाहा᳚) || <span class='RishiDevChandas'>{जमदग्निः | पवमानः सोमः | द्विपदा गायत्री}</span>17 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>तेसु॒तासो᳚म॒दिन्त॑माःशु॒क्रावा॒युम॑सृक्षत॒(स्वाहा᳚) || <span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | द्विपदा गायत्री}</span>18 || </td>
+<td class='VargaStyle2'>तेसु॒तासो᳚म॒दिन्त॑माःशु॒क्रावा॒युम॑सृक्षत॒(स्वाहा᳚) || <span class='RishiDevChandas'>{जमदग्निः | पवमानः सोमः | द्विपदा गायत्री}</span>18 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ग्राव्णा᳚तु॒न्नो,अ॒भिष्टु॑तःप॒वित्रं᳚सोमगच्छसि |<span class='RishiDevChandas'>{आंगिरसः पवित्रः | पवमानः सोमः | गायत्री}</span><p>दध॑त्‌स्तो॒त्रेसु॒वीर्य॒‌म्(स्वाहा᳚) || 19 || </td>
