--- a/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
+++ b/Rigveda/SamhitaPatha/Kannada/Ashtaka/Format4/RVS-Kannada-F4-A04.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಅಷ್ಟಕ: 04) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 19-Nov-2024]</h6>
+<br> [Last updated on: 29-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1085,7 +1085,7 @@
 <td class='VargaStyle1'>ಚ॒ತ್ವಾರ॑ಈಂಬಿಭ್ರತಿಕ್ಷೇಮ॒ಯಂತೋ॒ದಶ॒ಗರ್ಭಂ᳚ಚ॒ರಸೇ᳚ಧಾಪಯಂತೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿರಥಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ತ್ರಿ॒ಧಾತ॑ವಃಪರ॒ಮಾ,ಅ॑ಸ್ಯ॒ಗಾವೋ᳚ದಿ॒ವಶ್ಚ॑ರಂತಿ॒ಪರಿ॑ಸ॒ದ್ಯೋ,ಅಂತಾಂ॒ತ್(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇ॒ದಂವಪು᳚ರ್‍ನಿ॒ವಚ॑ನಂಜನಾಸ॒ಶ್ಚರಂ᳚ತಿ॒ಯನ್ನ॒ದ್ಯ॑ಸ್ತ॒ಸ್ಥುರಾಪಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿರಥಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದ್ವೇಯದೀಂ᳚ಬಿಭೃ॒ತೋಮಾ॒ತುರ॒ನ್ಯೇ,ಇ॒ಹೇಹ॑ಜಾ॒ತೇಯ॒ಮ್ಯಾ॒೩॑(ಆ॒)ಸಬಂ᳚ಧೂ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
+<td class='VargaStyle1'>ಇ॒ದಂವಪು᳚ರ್‌ನಿ॒ವಚ॑ನಂಜನಾಸ॒ಶ್ಚರಂ᳚ತಿ॒ಯನ್ನ॒ದ್ಯ॑ಸ್‌ತ॒ಸ್ಥುರಾಪಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿರಥಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದ್ವೇಯದೀಂ᳚ಬಿಭೃ॒ತೋಮಾ॒ತುರ॒ನ್ಯೇ,ಇ॒ಹೇಹ॑ಜಾ॒ತೇಯ॒ಮ್ಯಾ॒೩॑(ಆ॒)ಸಬಂ᳚ಧೂ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ವಿತ᳚ನ್ವತೇ॒ಧಿಯೋ᳚,ಅಸ್ಮಾ॒,ಅಪಾಂ᳚ಸಿ॒ವಸ್ತ್ರಾ᳚ಪು॒ತ್ರಾಯ॑ಮಾ॒ತರೋ᳚ವಯಂತಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿರಥಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ಪ॒ಪ್ರ॒ಕ್ಷೇವೃಷ॑ಣೋ॒ಮೋದ॑ಮಾನಾದಿ॒ವಸ್ಪ॒ಥಾವ॒ಧ್ವೋ᳚ಯಂ॒ತ್ಯಚ್ಛ॒(ಸ್ವಾಹಾ᳚) || 6 || </td>
@@ -1124,7 +1124,7 @@
 <td class='VargaStyle1'>ಅ॒ದ॒ತ್ರ॒ಯಾದ॑ಯತೇ॒ವಾರ್‍ಯಾ᳚ಣಿಪೂ॒ಷಾಭಗೋ॒,ಅದಿ॑ತಿ॒ರ್‍ವಸ್ತ॑ಉ॒ಸ್ರಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿಪ್ರಭುಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಇಂದ್ರೋ॒ವಿಷ್ಣು॒ರ್‍ವರು॑ಣೋಮಿ॒ತ್ರೋ,ಅ॒ಗ್ನಿರಹಾ᳚ನಿಭ॒ದ್ರಾಜ॑ನಯಂತದ॒ಸ್ಮಾಃ(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತನ್ನೋ᳚,ಅನ॒ರ್‍ವಾಸ॑ವಿ॒ತಾವರೂ᳚ಥಂ॒ತತ್‌ಸಿಂಧ॑ವಇ॒ಷಯಂ᳚ತೋ॒,ಅನು॑ಗ್ಮನ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿಪ್ರಭುಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉಪ॒ಯದ್ವೋಚೇ᳚,ಅಧ್ವ॒ರಸ್ಯ॒ಹೋತಾ᳚ರಾ॒ಯಃಸ್ಯಾ᳚ಮ॒ಪತ॑ಯೋ॒ವಾಜ॑ರತ್ನಾಃ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle1'>ತನ್ನೋ᳚,ಅನ॒ರ್‍ವಾಸ॑ವಿ॒ತಾವರೂ᳚ಥಂ॒ತತ್‌ಸಿಂಧ॑ವಇ॒ಷಯಂ᳚ತೋ॒,ಅನು॑ಗ್ಮನ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿಪ್ರಭುಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉಪ॒ಯದ್‌ವೋಚೇ᳚,ಅಧ್ವ॒ರಸ್ಯ॒ಹೋತಾ᳚ರಾ॒ಯಃಸ್ಯಾ᳚ಮ॒ಪತ॑ಯೋ॒ವಾಜ॑ರತ್ನಾಃ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪ್ರಯೇವಸು॑ಭ್ಯ॒ಈವ॒ದಾನಮೋ॒ದುರ್‍ಯೇಮಿ॒ತ್ರೇವರು॑ಣೇಸೂ॒ಕ್ತವಾ᳚ಚಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿಪ್ರಭುಃ | ವಿಶ್ವದೇವಾಃ | ತೃಣಪಾಣಿಃ}</span><p>ಅವೈ॒ತ್ವಭ್ವಂ᳚ಕೃಣು॒ತಾವರೀ᳚ಯೋದಿ॒ವಸ್ಪೃ॑ಥಿ॒ವ್ಯೋರವ॑ಸಾಮದೇಮ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
@@ -1157,7 +1157,7 @@
 <td class='VargaStyle1'>ಋತ॑ಧೀತಯ॒ಆಗ॑ತ॒ಸತ್ಯ॑ಧರ್ಮಾಣೋ,ಅಧ್ವ॒ರಂ |<span class='RishiDevChandas'>{ಸ್ವಸ್ತ್ಯಾತ್ರೇಯಃ | ವಿಶ್ವದೇವಾಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಗ್ನೇಃಪಿ॑ಬತಜಿ॒ಹ್ವಯಾ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಿಪ್ರೇ᳚ಭಿರ್‍ವಿಪ್ರಸಂತ್ಯಪ್ರಾತ॒ರ್‍ಯಾವ॑ಭಿ॒ರಾಗ॑ಹಿ |<span class='RishiDevChandas'>{ಸ್ವಸ್ತ್ಯಾತ್ರೇಯಃ | ವಿಶ್ವದೇವಾಃ | ಗಾಯತ್ರೀ}</span><p>ದೇ॒ವೇಭಿಃ॒ಸೋಮ॑ಪೀತಯೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle1'>ವಿಪ್ರೇ᳚ಭಿರ್‌ವಿಪ್ರಸಂತ್ಯಪ್ರಾತ॒ರ್‍ಯಾವ॑ಭಿ॒ರಾಗ॑ಹಿ |<span class='RishiDevChandas'>{ಸ್ವಸ್ತ್ಯಾತ್ರೇಯಃ | ವಿಶ್ವದೇವಾಃ | ಗಾಯತ್ರೀ}</span><p>ದೇ॒ವೇಭಿಃ॒ಸೋಮ॑ಪೀತಯೇ॒(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅ॒ಯಂಸೋಮ॑ಶ್ಚ॒ಮೂಸು॒ತೋಽಮ॑ತ್ರೇ॒ಪರಿ॑ಷಿಚ್ಯತೇ |<span class='RishiDevChandas'>{ಸ್ವಸ್ತ್ಯಾತ್ರೇಯಃ | ಇಂದ್ರವಾಯೂ | ಗಾಯತ್ರೀ}</span><p>ಪ್ರಿ॒ಯಇಂದ್ರಾ᳚ಯವಾ॒ಯವೇ॒(ಸ್ವಾಹಾ᳚) || 4 || </td>
