--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M09.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M09.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 09) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1950,55 +1950,55 @@
 <td class='VargaStyle1'>ತ್ವಂ ಸೋ᳚ಮಾಸಿ ಧಾರ॒ಯುರ್ಮಂ॒ದ್ರ ಓಜಿ॑ಷ್ಠೋ, ಅಧ್ವ॒ರೇ |<span class='RishiDevChandas'>{ಭರದ್ವಾಜಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಪವ॑ಸ್ವ ಮಂಹ॒ಯದ್ರ॑ಯಿಃ ||<span class='MantraNumbering'>{1/32}{9.67.1}{9.3.7.1}{7.2.13.1}{790, 8269}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತ್ವಂ ಸು॒ತೋ ನೃ॒ಮಾದ॑ನೋ ದಧ॒ನ್ವಾನ್‌ ಮ॑ತ್ಸ॒ರಿಂತ॑ಮಃ |<span class='RishiDevChandas'>{ಕಶ್ಯಪಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಾ᳚ಯ ಸೂ॒ರಿರಂಧ॑ಸಾ ||<span class='MantraNumbering'>{2/32}{9.67.2}{9.3.7.2}{7.2.13.2}{790, 8270}</span></td>
+<td class='VargaStyle1'>ತ್ವಂ ಸು॒ತೋ ನೃ॒ಮಾದ॑ನೋ ದಧ॒ನ್ವಾನ್‌ ಮ॑ತ್ಸ॒ರಿಂತ॑ಮಃ |<span class='RishiDevChandas'>{ಭರದ್ವಾಜಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಾ᳚ಯ ಸೂ॒ರಿರಂಧ॑ಸಾ ||<span class='MantraNumbering'>{2/32}{9.67.2}{9.3.7.2}{7.2.13.2}{790, 8270}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತ್ವಂ ಸು॑ಷ್ವಾ॒ಣೋ, ಅದ್ರಿ॑ಭಿರ॒ಭ್ಯ॑ರ್ಷ॒ ಕನಿ॑ಕ್ರದತ್ |<span class='RishiDevChandas'>{ಗೋತಮಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದ್ಯು॒ಮಂತಂ॒ ಶುಷ್ಮ॑ಮುತ್ತ॒ಮಂ ||<span class='MantraNumbering'>{3/32}{9.67.3}{9.3.7.3}{7.2.13.3}{790, 8271}</span></td>
+<td class='VargaStyle1'>ತ್ವಂ ಸು॑ಷ್ವಾ॒ಣೋ, ಅದ್ರಿ॑ಭಿರ॒ಭ್ಯ॑ರ್ಷ॒ ಕನಿ॑ಕ್ರದತ್ |<span class='RishiDevChandas'>{ಭರದ್ವಾಜಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದ್ಯು॒ಮಂತಂ॒ ಶುಷ್ಮ॑ಮುತ್ತ॒ಮಂ ||<span class='MantraNumbering'>{3/32}{9.67.3}{9.3.7.3}{7.2.13.3}{790, 8271}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇಂದು᳚ರ್ಹಿನ್ವಾ॒ನೋ, ಅ॑ರ್ಷತಿ ತಿ॒ರೋ ವಾರಾ᳚ಣ್ಯ॒ವ್ಯಯಾ᳚ |<span class='RishiDevChandas'>{ಅತ್ರಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಹರಿ॒ರ್‍ವಾಜ॑ಮಚಿಕ್ರದತ್ ||<span class='MantraNumbering'>{4/32}{9.67.4}{9.3.7.4}{7.2.13.4}{790, 8272}</span></td>
+<td class='VargaStyle1'>ಇಂದು᳚ರ್ಹಿನ್ವಾ॒ನೋ, ಅ॑ರ್ಷತಿ ತಿ॒ರೋ ವಾರಾ᳚ಣ್ಯ॒ವ್ಯಯಾ᳚ |<span class='RishiDevChandas'>{ಕಶ್ಯಪಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಹರಿ॒ರ್‍ವಾಜ॑ಮಚಿಕ್ರದತ್ ||<span class='MantraNumbering'>{4/32}{9.67.4}{9.3.7.4}{7.2.13.4}{790, 8272}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇಂದೋ॒ ವ್ಯವ್ಯ॑ಮರ್ಷಸಿ॒ ವಿ ಶ್ರವಾಂ᳚ಸಿ॒ ವಿ ಸೌಭ॑ಗಾ |<span class='RishiDevChandas'>{ವಿಶ್ವಾಮಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ವಿ ವಾಜಾ᳚ನ್‌ ತ್ಸೋಮ॒ ಗೋಮ॑ತಃ ||<span class='MantraNumbering'>{5/32}{9.67.5}{9.3.7.5}{7.2.13.5}{790, 8273}</span></td>
+<td class='VargaStyle1'>ಇಂದೋ॒ ವ್ಯವ್ಯ॑ಮರ್ಷಸಿ॒ ವಿ ಶ್ರವಾಂ᳚ಸಿ॒ ವಿ ಸೌಭ॑ಗಾ |<span class='RishiDevChandas'>{ಕಶ್ಯಪಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ವಿ ವಾಜಾ᳚ನ್‌ ತ್ಸೋಮ॒ ಗೋಮ॑ತಃ ||<span class='MantraNumbering'>{5/32}{9.67.5}{9.3.7.5}{7.2.13.5}{790, 8273}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಆ ನ॑ ಇಂದೋ ಶತ॒ಗ್ವಿನಂ᳚ ರ॒ಯಿಂ ಗೋಮಂ᳚ತಮ॒ಶ್ವಿನಂ᳚ |<span class='RishiDevChandas'>{ಜಮದಗ್ನಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಭರಾ᳚ ಸೋಮ ಸಹ॒ಸ್ರಿಣಂ᳚ ||<span class='MantraNumbering'>{6/32}{9.67.6}{9.3.7.6}{7.2.14.1}{790, 8274}</span></td>
+<td class='VargaStyle2'>ಆ ನ॑ ಇಂದೋ ಶತ॒ಗ್ವಿನಂ᳚ ರ॒ಯಿಂ ಗೋಮಂ᳚ತಮ॒ಶ್ವಿನಂ᳚ |<span class='RishiDevChandas'>{ಕಶ್ಯಪಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಭರಾ᳚ ಸೋಮ ಸಹ॒ಸ್ರಿಣಂ᳚ ||<span class='MantraNumbering'>{6/32}{9.67.6}{9.3.7.6}{7.2.14.1}{790, 8274}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಪವ॑ಮಾನಾಸ॒ ಇಂದ॑ವಸ್ತಿ॒ರಃ ಪ॒ವಿತ್ರ॑ಮಾ॒ಶವಃ॑ |<span class='RishiDevChandas'>{ವಸಿಷ್ಠಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಂ॒ ಯಾಮೇ᳚ಭಿರಾಶತ ||<span class='MantraNumbering'>{7/32}{9.67.7}{9.3.7.7}{7.2.14.2}{790, 8275}</span></td>
+<td class='VargaStyle2'>ಪವ॑ಮಾನಾಸ॒ ಇಂದ॑ವಸ್ತಿ॒ರಃ ಪ॒ವಿತ್ರ॑ಮಾ॒ಶವಃ॑ |<span class='RishiDevChandas'>{ಗೋತಮಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಂ॒ ಯಾಮೇ᳚ಭಿರಾಶತ ||<span class='MantraNumbering'>{7/32}{9.67.7}{9.3.7.7}{7.2.14.2}{790, 8275}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಕ॒ಕು॒ಹಃ ಸೋ॒ಮ್ಯೋ ರಸ॒ ಇಂದು॒ರಿಂದ್ರಾ᳚ಯ ಪೂ॒ರ್‍ವ್ಯಃ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಆ॒ಯುಃ ಪ॑ವತ ಆ॒ಯವೇ᳚ ||<span class='MantraNumbering'>{8/32}{9.67.8}{9.3.7.8}{7.2.14.3}{790, 8276}</span></td>
+<td class='VargaStyle2'>ಕ॒ಕು॒ಹಃ ಸೋ॒ಮ್ಯೋ ರಸ॒ ಇಂದು॒ರಿಂದ್ರಾ᳚ಯ ಪೂ॒ರ್‍ವ್ಯಃ |<span class='RishiDevChandas'>{ಗೋತಮಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಆ॒ಯುಃ ಪ॑ವತ ಆ॒ಯವೇ᳚ ||<span class='MantraNumbering'>{8/32}{9.67.8}{9.3.7.8}{7.2.14.3}{790, 8276}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಹಿ॒ನ್ವಂತಿ॒ ಸೂರ॒ಮುಸ್ರ॑ಯಃ॒ ಪವ॑ಮಾನಂ ಮಧು॒ಶ್ಚುತಂ᳚ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಭಿ ಗಿ॒ರಾ ಸಮ॑ಸ್ವರನ್ ||<span class='MantraNumbering'>{9/32}{9.67.9}{9.3.7.9}{7.2.14.4}{790, 8277}</span></td>
+<td class='VargaStyle2'>ಹಿ॒ನ್ವಂತಿ॒ ಸೂರ॒ಮುಸ್ರ॑ಯಃ॒ ಪವ॑ಮಾನಂ ಮಧು॒ಶ್ಚುತಂ᳚ |<span class='RishiDevChandas'>{ಗೋತಮಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಭಿ ಗಿ॒ರಾ ಸಮ॑ಸ್ವರನ್ ||<span class='MantraNumbering'>{9/32}{9.67.9}{9.3.7.9}{7.2.14.4}{790, 8277}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಅ॒ವಿ॒ತಾ ನೋ᳚, ಅ॒ಜಾಶ್ವಃ॑ ಪೂ॒ಷಾ ಯಾಮ॑ನಿಯಾಮನಿ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆ ಭ॑ಕ್ಷತ್‌ ಕ॒ನ್ಯಾ᳚ಸು ನಃ ||<span class='MantraNumbering'>{10/32}{9.67.10}{9.3.7.10}{7.2.14.5}{790, 8278}</span></td>
+<td class='VargaStyle2'>ಅ॒ವಿ॒ತಾ ನೋ᳚, ಅ॒ಜಾಶ್ವಃ॑ ಪೂ॒ಷಾ ಯಾಮ॑ನಿಯಾಮನಿ |<span class='RishiDevChandas'>{ಅತ್ರಿಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆ ಭ॑ಕ್ಷತ್‌ ಕ॒ನ್ಯಾ᳚ಸು ನಃ ||<span class='MantraNumbering'>{10/32}{9.67.10}{9.3.7.10}{7.2.14.5}{790, 8278}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅ॒ಯಂ ಸೋಮಃ॑ ಕಪ॒ರ್ದಿನೇ᳚ ಘೃ॒ತಂ ನ ಪ॑ವತೇ॒ ಮಧು॑ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆ ಭ॑ಕ್ಷತ್‌ ಕ॒ನ್ಯಾ᳚ಸು ನಃ ||<span class='MantraNumbering'>{11/32}{9.67.11}{9.3.7.11}{7.2.15.1}{790, 8279}</span></td>
+<td class='VargaStyle1'>ಅ॒ಯಂ ಸೋಮಃ॑ ಕಪ॒ರ್ದಿನೇ᳚ ಘೃ॒ತಂ ನ ಪ॑ವತೇ॒ ಮಧು॑ |<span class='RishiDevChandas'>{ಅತ್ರಿಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆ ಭ॑ಕ್ಷತ್‌ ಕ॒ನ್ಯಾ᳚ಸು ನಃ ||<span class='MantraNumbering'>{11/32}{9.67.11}{9.3.7.11}{7.2.15.1}{790, 8279}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅ॒ಯಂ ತ॑ ಆಘೃಣೇ ಸು॒ತೋ ಘೃ॒ತಂ ನ ಪ॑ವತೇ॒ ಶುಚಿ॑ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆ ಭ॑ಕ್ಷತ್‌ ಕ॒ನ್ಯಾ᳚ಸು ನಃ ||<span class='MantraNumbering'>{12/32}{9.67.12}{9.3.7.12}{7.2.15.2}{790, 8280}</span></td>
+<td class='VargaStyle1'>ಅ॒ಯಂ ತ॑ ಆಘೃಣೇ ಸು॒ತೋ ಘೃ॒ತಂ ನ ಪ॑ವತೇ॒ ಶುಚಿ॑ |<span class='RishiDevChandas'>{ಅತ್ರಿಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆ ಭ॑ಕ್ಷತ್‌ ಕ॒ನ್ಯಾ᳚ಸು ನಃ ||<span class='MantraNumbering'>{12/32}{9.67.12}{9.3.7.12}{7.2.15.2}{790, 8280}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಾ॒ಚೋ ಜಂ॒ತುಃ ಕ॑ವೀ॒ನಾಂ ಪವ॑ಸ್ವ ಸೋಮ॒ ಧಾರ॑ಯಾ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದೇ॒ವೇಷು॑ ರತ್ನ॒ಧಾ, ಅ॑ಸಿ ||<span class='MantraNumbering'>{13/32}{9.67.13}{9.3.7.13}{7.2.15.3}{790, 8281}</span></td>
+<td class='VargaStyle1'>ವಾ॒ಚೋ ಜಂ॒ತುಃ ಕ॑ವೀ॒ನಾಂ ಪವ॑ಸ್ವ ಸೋಮ॒ ಧಾರ॑ಯಾ |<span class='RishiDevChandas'>{ವಿಶ್ವಾಮಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದೇ॒ವೇಷು॑ ರತ್ನ॒ಧಾ, ಅ॑ಸಿ ||<span class='MantraNumbering'>{13/32}{9.67.13}{9.3.7.13}{7.2.15.3}{790, 8281}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆ ಕ॒ಲಶೇ᳚ಷು ಧಾವತಿ ಶ್ಯೇ॒ನೋ ವರ್ಮ॒ ವಿ ಗಾ᳚ಹತೇ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಭಿ ದ್ರೋಣಾ॒ ಕನಿ॑ಕ್ರದತ್ ||<span class='MantraNumbering'>{14/32}{9.67.14}{9.3.7.14}{7.2.15.4}{790, 8282}</span></td>
+<td class='VargaStyle1'>ಆ ಕ॒ಲಶೇ᳚ಷು ಧಾವತಿ ಶ್ಯೇ॒ನೋ ವರ್ಮ॒ ವಿ ಗಾ᳚ಹತೇ |<span class='RishiDevChandas'>{ವಿಶ್ವಾಮಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಭಿ ದ್ರೋಣಾ॒ ಕನಿ॑ಕ್ರದತ್ ||<span class='MantraNumbering'>{14/32}{9.67.14}{9.3.7.14}{7.2.15.4}{790, 8282}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪರಿ॒ ಪ್ರ ಸೋ᳚ಮ ತೇ॒ ರಸೋಽಸ॑ರ್ಜಿ ಕ॒ಲಶೇ᳚ ಸು॒ತಃ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಶ್ಯೇ॒ನೋ ನ ತ॒ಕ್ತೋ, ಅ॑ರ್ಷತಿ ||<span class='MantraNumbering'>{15/32}{9.67.15}{9.3.7.15}{7.2.15.5}{790, 8283}</span></td>
+<td class='VargaStyle1'>ಪರಿ॒ ಪ್ರ ಸೋ᳚ಮ ತೇ॒ ರಸೋಽಸ॑ರ್ಜಿ ಕ॒ಲಶೇ᳚ ಸು॒ತಃ |<span class='RishiDevChandas'>{ವಿಶ್ವಾಮಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಶ್ಯೇ॒ನೋ ನ ತ॒ಕ್ತೋ, ಅ॑ರ್ಷತಿ ||<span class='MantraNumbering'>{15/32}{9.67.15}{9.3.7.15}{7.2.15.5}{790, 8283}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಪವ॑ಸ್ವ ಸೋಮ ಮಂ॒ದಯ॒ನ್ನಿಂದ್ರಾ᳚ಯ॒ ಮಧು॑ಮತ್ತಮಃ ||<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span><span class='MantraNumbering'>{16/32}{9.67.16}{9.3.7.16}{7.2.16.1}{790, 8284}</span></td>
+<td class='VargaStyle2'>ಪವ॑ಸ್ವ ಸೋಮ ಮಂ॒ದಯ॒ನ್ನಿಂದ್ರಾ᳚ಯ॒ ಮಧು॑ಮತ್ತಮಃ ||<span class='RishiDevChandas'>{ಜಮದಗ್ನಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span><span class='MantraNumbering'>{16/32}{9.67.16}{9.3.7.16}{7.2.16.1}{790, 8284}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಅಸೃ॑ಗ್ರನ್‌ ದೇ॒ವವೀ᳚ತಯೇ ವಾಜ॒ಯಂತೋ॒ ರಥಾ᳚, ಇವ ||<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span><span class='MantraNumbering'>{17/32}{9.67.17}{9.3.7.17}{7.2.16.2}{790, 8285}</span></td>
+<td class='VargaStyle2'>ಅಸೃ॑ಗ್ರನ್‌ ದೇ॒ವವೀ᳚ತಯೇ ವಾಜ॒ಯಂತೋ॒ ರಥಾ᳚, ಇವ ||<span class='RishiDevChandas'>{ಜಮದಗ್ನಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span><span class='MantraNumbering'>{17/32}{9.67.17}{9.3.7.17}{7.2.16.2}{790, 8285}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತೇ ಸು॒ತಾಸೋ᳚ ಮ॒ದಿಂತ॑ಮಾಃ ಶು॒ಕ್ರಾ ವಾ॒ಯುಮ॑ಸೃಕ್ಷತ ||<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span><span class='MantraNumbering'>{18/32}{9.67.18}{9.3.7.18}{7.2.16.3}{790, 8286}</span></td>
+<td class='VargaStyle2'>ತೇ ಸು॒ತಾಸೋ᳚ ಮ॒ದಿಂತ॑ಮಾಃ ಶು॒ಕ್ರಾ ವಾ॒ಯುಮ॑ಸೃಕ್ಷತ ||<span class='RishiDevChandas'>{ಜಮದಗ್ನಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span><span class='MantraNumbering'>{18/32}{9.67.18}{9.3.7.18}{7.2.16.3}{790, 8286}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಗ್ರಾವ್ಣಾ᳚ ತು॒ನ್ನೋ, ಅ॒ಭಿಷ್ಟು॑ತಃ ಪ॒ವಿತ್ರಂ᳚ ಸೋಮ ಗಚ್ಛಸಿ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದಧ॑ತ್‌ ಸ್ತೋ॒ತ್ರೇ ಸು॒ವೀರ್‍ಯಂ᳚ ||<span class='MantraNumbering'>{19/32}{9.67.19}{9.3.7.19}{7.2.16.4}{790, 8287}</span></td>
