--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format3/RVS-Kannada-F3-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format3/RVS-Kannada-F3-M05.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 19-Nov-2024]</h6>
+<br> [Last updated on: 29-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1411,7 +1411,7 @@
 <td class='VargaStyle1'>ಚ॒ತ್ವಾರ॑ಈಂಬಿಭ್ರತಿಕ್ಷೇಮ॒ಯಂತೋ॒ದಶ॒ಗರ್ಭಂ᳚ಚ॒ರಸೇ᳚ಧಾಪಯಂತೇ |<p>ತ್ರಿ॒ಧಾತ॑ವಃಪರ॒ಮಾ,ಅ॑ಸ್ಯ॒ಗಾವೋ᳚ದಿ॒ವಶ್ಚ॑ರಂತಿ॒ಪರಿ॑ಸ॒ದ್ಯೋ,ಅಂತಾ॑ನ್ || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇ॒ದಂವಪು᳚ರ್‍ನಿ॒ವಚ॑ನಂಜನಾಸ॒ಶ್ಚರಂ᳚ತಿ॒ಯನ್ನ॒ದ್ಯ॑ಸ್ತ॒ಸ್ಥುರಾಪಃ॑ |<p>ದ್ವೇಯದೀಂ᳚ಬಿಭೃ॒ತೋಮಾ॒ತುರ॒ನ್ಯೇ,ಇ॒ಹೇಹ॑ಜಾ॒ತೇಯ॒ಮ್ಯಾ॒೩॑(ಆ॒)ಸಬಂ᳚ಧೂ || 5 || </td>
+<td class='VargaStyle1'>ಇ॒ದಂವಪು᳚ರ್‌ನಿ॒ವಚ॑ನಂಜನಾಸ॒ಶ್ಚರಂ᳚ತಿ॒ಯನ್ನ॒ದ್ಯ॑ಸ್‌ತ॒ಸ್ಥುರಾಪಃ॑ |<p>ದ್ವೇಯದೀಂ᳚ಬಿಭೃ॒ತೋಮಾ॒ತುರ॒ನ್ಯೇ,ಇ॒ಹೇಹ॑ಜಾ॒ತೇಯ॒ಮ್ಯಾ॒೩॑(ಆ॒)ಸಬಂ᳚ಧೂ || 5 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ವಿತ᳚ನ್ವತೇ॒ಧಿಯೋ᳚,ಅಸ್ಮಾ॒,ಅಪಾಂ᳚ಸಿ॒ವಸ್ತ್ರಾ᳚ಪು॒ತ್ರಾಯ॑ಮಾ॒ತರೋ᳚ವಯಂತಿ |<p>ಉ॒ಪ॒ಪ್ರ॒ಕ್ಷೇವೃಷ॑ಣೋ॒ಮೋದ॑ಮಾನಾದಿ॒ವಸ್ಪ॒ಥಾವ॒ಧ್ವೋ᳚ಯಂ॒ತ್ಯಚ್ಛ॑ || 6 || </td>
@@ -1452,7 +1452,7 @@
 <td class='VargaStyle1'>ಅ॒ದ॒ತ್ರ॒ಯಾದ॑ಯತೇ॒ವಾರ್‍ಯಾ᳚ಣಿಪೂ॒ಷಾಭಗೋ॒,ಅದಿ॑ತಿ॒ರ್‍ವಸ್ತ॑ಉ॒ಸ್ರಃ |<p>ಇಂದ್ರೋ॒ವಿಷ್ಣು॒ರ್‍ವರು॑ಣೋಮಿ॒ತ್ರೋ,ಅ॒ಗ್ನಿರಹಾ᳚ನಿಭ॒ದ್ರಾಜ॑ನಯಂತದ॒ಸ್ಮಾಃ || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತನ್ನೋ᳚,ಅನ॒ರ್‍ವಾಸ॑ವಿ॒ತಾವರೂ᳚ಥಂ॒ತತ್‌ಸಿಂಧ॑ವಇ॒ಷಯಂ᳚ತೋ॒,ಅನು॑ಗ್ಮನ್ |<p>ಉಪ॒ಯದ್ವೋಚೇ᳚,ಅಧ್ವ॒ರಸ್ಯ॒ಹೋತಾ᳚ರಾ॒ಯಃಸ್ಯಾ᳚ಮ॒ಪತ॑ಯೋ॒ವಾಜ॑ರತ್ನಾಃ || 4 || </td>
+<td class='VargaStyle1'>ತನ್ನೋ᳚,ಅನ॒ರ್‍ವಾಸ॑ವಿ॒ತಾವರೂ᳚ಥಂ॒ತತ್‌ಸಿಂಧ॑ವಇ॒ಷಯಂ᳚ತೋ॒,ಅನು॑ಗ್ಮನ್ |<p>ಉಪ॒ಯದ್‌ವೋಚೇ᳚,ಅಧ್ವ॒ರಸ್ಯ॒ಹೋತಾ᳚ರಾ॒ಯಃಸ್ಯಾ᳚ಮ॒ಪತ॑ಯೋ॒ವಾಜ॑ರತ್ನಾಃ || 4 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪ್ರಯೇವಸು॑ಭ್ಯ॒ಈವ॒ದಾನಮೋ॒ದುರ್‍ಯೇಮಿ॒ತ್ರೇವರು॑ಣೇಸೂ॒ಕ್ತವಾ᳚ಚಃ |<p>ಅವೈ॒ತ್ವಭ್ವಂ᳚ಕೃಣು॒ತಾವರೀ᳚ಯೋದಿ॒ವಸ್ಪೃ॑ಥಿ॒ವ್ಯೋರವ॑ಸಾಮದೇಮ || 5 || </td>
@@ -1487,7 +1487,7 @@
 <td class='VargaStyle1'>ಋತ॑ಧೀತಯ॒ಆಗ॑ತ॒ಸತ್ಯ॑ಧರ್ಮಾಣೋ,ಅಧ್ವ॒ರಂ | ಅ॒ಗ್ನೇಃಪಿ॑ಬತಜಿ॒ಹ್ವಯಾ᳚ || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಿಪ್ರೇ᳚ಭಿರ್‍ವಿಪ್ರಸಂತ್ಯಪ್ರಾತ॒ರ್‍ಯಾವ॑ಭಿ॒ರಾಗ॑ಹಿ | ದೇ॒ವೇಭಿಃ॒ಸೋಮ॑ಪೀತಯೇ || 3 || </td>
+<td class='VargaStyle1'>ವಿಪ್ರೇ᳚ಭಿರ್‌ವಿಪ್ರಸಂತ್ಯಪ್ರಾತ॒ರ್‍ಯಾವ॑ಭಿ॒ರಾಗ॑ಹಿ | ದೇ॒ವೇಭಿಃ॒ಸೋಮ॑ಪೀತಯೇ || 3 || </td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅ॒ಯಂಸೋಮ॑ಶ್ಚ॒ಮೂಸು॒ತೋಽಮ॑ತ್ರೇ॒ಪರಿ॑ಷಿಚ್ಯತೇ | ಪ್ರಿ॒ಯಇಂದ್ರಾ᳚ಯವಾ॒ಯವೇ᳚ || 4 || </td>
