--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format4/RVS-Malayalam-F4-A07.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format4/RVS-Malayalam-F4-A07.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 07) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -869,55 +869,55 @@
 <td class='VargaStyle1'>ത്വംസോ᳚മാസിധാര॒യുർമ॒ന്ദ്രഓജി॑ഷ്ഠോ,അധ്വ॒രേ |<span class='RishiDevChandas'>{ഭരദ്വാജഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>പവ॑സ്വമംഹ॒യദ്ര॑യിഃ॒(സ്വാഹാ᳚) || 1 || <span class='MantraNumbering'>വർഗ:13</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ത്വംസു॒തോനൃ॒മാദ॑നോദധ॒ന്വാൻ‌മ॑ത്സ॒രിന്ത॑മഃ |<span class='RishiDevChandas'>{കശ്യപഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഇന്ദ്രാ᳚യസൂ॒രിരന്ധ॑സാ॒(സ്വാഹാ᳚) || 2 || </td>
+<td class='VargaStyle1'>ത്വംസു॒തോനൃ॒മാദ॑നോദധ॒ന്വാൻ‌മ॑ത്സ॒രിന്ത॑മഃ |<span class='RishiDevChandas'>{ഭരദ്വാജഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഇന്ദ്രാ᳚യസൂ॒രിരന്ധ॑സാ॒(സ്വാഹാ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ത്വംസു॑ഷ്വാ॒ണോ,അദ്രി॑ഭിര॒ഭ്യ॑ർഷ॒കനി॑ക്രദത് |<span class='RishiDevChandas'>{ഗോതമഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദ്യു॒മന്തം॒ശുഷ്മ॑മുത്ത॒മം(സ്വാഹാ᳚) || 3 || </td>
+<td class='VargaStyle1'>ത്വംസു॑ഷ്വാ॒ണോ,അദ്രി॑ഭിര॒ഭ്യ॑ർഷ॒കനി॑ക്രദത് |<span class='RishiDevChandas'>{ഭരദ്വാജഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദ്യു॒മന്തം॒ശുഷ്മ॑മുത്ത॒മം(സ്വാഹാ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഇന്ദു᳚ർഹിന്വാ॒നോ,അ॑ർഷതിതി॒രോവാരാ᳚ണ്യ॒വ്യയാ᳚ |<span class='RishiDevChandas'>{അത്രിഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഹരി॒ർവാജ॑മചിക്രദ॒‌ത്(സ്വാഹാ᳚) || 4 || </td>
+<td class='VargaStyle1'>ഇന്ദു᳚ർഹിന്വാ॒നോ,അ॑ർഷതിതി॒രോവാരാ᳚ണ്യ॒വ്യയാ᳚ |<span class='RishiDevChandas'>{കശ്യപഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഹരി॒ർവാജ॑മചിക്രദ॒‌ത്(സ്വാഹാ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഇന്ദോ॒വ്യവ്യ॑മർഷസി॒വിശ്രവാം᳚സി॒വിസൗഭ॑ഗാ |<span class='RishiDevChandas'>{വിശ്വാമിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>വിവാജാ᳚ൻ‌ത്സോമ॒ഗോമ॑തഃ॒(സ്വാഹാ᳚) || 5 || </td>
+<td class='VargaStyle1'>ഇന്ദോ॒വ്യവ്യ॑മർഷസി॒വിശ്രവാം᳚സി॒വിസൗഭ॑ഗാ |<span class='RishiDevChandas'>{കശ്യപഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>വിവാജാ᳚ൻ‌ത്സോമ॒ഗോമ॑തഃ॒(സ്വാഹാ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ആന॑ഇന്ദോശത॒ഗ്വിനം᳚ര॒യിംഗോമ᳚ന്തമ॒ശ്വിനം᳚ |<span class='RishiDevChandas'>{ജമദഗ്നിഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഭരാ᳚സോമസഹ॒സ്രിണ॒‌മ്(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:14</span></td>
+<td class='VargaStyle2'>ആന॑ഇന്ദോശത॒ഗ്വിനം᳚ര॒യിംഗോമ᳚ന്തമ॒ശ്വിനം᳚ |<span class='RishiDevChandas'>{കശ്യപഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഭരാ᳚സോമസഹ॒സ്രിണ॒‌മ്(സ്വാഹാ᳚) || 6 || <span class='MantraNumbering'>വർഗ:14</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>പവ॑മാനാസ॒ഇന്ദ॑വസ്തി॒രഃപ॒വിത്ര॑മാ॒ശവഃ॑ |<span class='RishiDevChandas'>{വസിഷ്ഠഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഇന്ദ്രം॒യാമേ᳚ഭിരാശത॒(സ്വാഹാ᳚) || 7 || </td>
+<td class='VargaStyle2'>പവ॑മാനാസ॒ഇന്ദ॑വസ്തി॒രഃപ॒വിത്ര॑മാ॒ശവഃ॑ |<span class='RishiDevChandas'>{ഗോതമഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഇന്ദ്രം॒യാമേ᳚ഭിരാശത॒(സ്വാഹാ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ക॒കു॒ഹഃസോ॒മ്യോരസ॒ഇന്ദു॒രിന്ദ്രാ᳚യപൂ॒ർവ്യഃ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ആ॒യുഃപ॑വതആ॒യവേ॒(സ്വാഹാ᳚) || 8 || </td>
+<td class='VargaStyle2'>ക॒കു॒ഹഃസോ॒മ്യോരസ॒ഇന്ദു॒രിന്ദ്രാ᳚യപൂ॒ർവ്യഃ |<span class='RishiDevChandas'>{ഗോതമഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ആ॒യുഃപ॑വതആ॒യവേ॒(സ്വാഹാ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഹി॒ന്വന്തി॒സൂര॒മുസ്ര॑യഃ॒പവ॑മാനംമധു॒ശ്ചുതം᳚ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>അ॒ഭിഗി॒രാസമ॑സ്വര॒‌ന്(സ്വാഹാ᳚) || 9 || </td>
+<td class='VargaStyle2'>ഹി॒ന്വന്തി॒സൂര॒മുസ്ര॑യഃ॒പവ॑മാനംമധു॒ശ്ചുതം᳚ |<span class='RishiDevChandas'>{ഗോതമഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>അ॒ഭിഗി॒രാസമ॑സ്വര॒‌ന്(സ്വാഹാ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>അ॒വി॒താനോ᳚,അ॒ജാശ്വഃ॑പൂ॒ഷായാമ॑നിയാമനി |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആഭ॑ക്ഷത്‌ക॒ന്യാ᳚സുനഃ॒(സ്വാഹാ᳚) || 10 || </td>
+<td class='VargaStyle2'>അ॒വി॒താനോ᳚,അ॒ജാശ്വഃ॑പൂ॒ഷായാമ॑നിയാമനി |<span class='RishiDevChandas'>{അത്രിഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആഭ॑ക്ഷത്‌ക॒ന്യാ᳚സുനഃ॒(സ്വാഹാ᳚) || 10 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അ॒യംസോമഃ॑കപ॒ർദിനേ᳚ഘൃ॒തംനപ॑വതേ॒മധു॑ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആഭ॑ക്ഷത്‌ക॒ന്യാ᳚സുനഃ॒(സ്വാഹാ᳚) || 11 || <span class='MantraNumbering'>വർഗ:15</span></td>
+<td class='VargaStyle1'>അ॒യംസോമഃ॑കപ॒ർദിനേ᳚ഘൃ॒തംനപ॑വതേ॒മധു॑ |<span class='RishiDevChandas'>{അത്രിഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആഭ॑ക്ഷത്‌ക॒ന്യാ᳚സുനഃ॒(സ്വാഹാ᳚) || 11 || <span class='MantraNumbering'>വർഗ:15</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അ॒യംത॑ആഘൃണേസു॒തോഘൃ॒തംനപ॑വതേ॒ശുചി॑ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആഭ॑ക്ഷത്‌ക॒ന്യാ᳚സുനഃ॒(സ്വാഹാ᳚) || 12 || </td>
+<td class='VargaStyle1'>അ॒യംത॑ആഘൃണേസു॒തോഘൃ॒തംനപ॑വതേ॒ശുചി॑ |<span class='RishiDevChandas'>{അത്രിഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആഭ॑ക്ഷത്‌ക॒ന്യാ᳚സുനഃ॒(സ്വാഹാ᳚) || 12 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>വാ॒ചോജ॒ന്തുഃക॑വീ॒നാംപവ॑സ്വസോമ॒ധാര॑യാ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദേ॒വേഷു॑രത്ന॒ധാ,അ॑സി॒(സ്വാഹാ᳚) || 13 || </td>
+<td class='VargaStyle1'>വാ॒ചോജ॒ന്തുഃക॑വീ॒നാംപവ॑സ്വസോമ॒ധാര॑യാ |<span class='RishiDevChandas'>{വിശ്വാമിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദേ॒വേഷു॑രത്ന॒ധാ,അ॑സി॒(സ്വാഹാ᳚) || 13 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആക॒ലശേ᳚ഷുധാവതിശ്യേ॒നോവർമ॒വിഗാ᳚ഹതേ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>അ॒ഭിദ്രോണാ॒കനി॑ക്രദ॒‌ത്(സ്വാഹാ᳚) || 14 || </td>
+<td class='VargaStyle1'>ആക॒ലശേ᳚ഷുധാവതിശ്യേ॒നോവർമ॒വിഗാ᳚ഹതേ |<span class='RishiDevChandas'>{വിശ്വാമിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>അ॒ഭിദ്രോണാ॒കനി॑ക്രദ॒‌ത്(സ്വാഹാ᳚) || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>പരി॒പ്രസോ᳚മതേ॒രസോഽസ॑ർജിക॒ലശേ᳚സു॒തഃ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ശ്യേ॒നോനത॒ക്തോ,അ॑ർഷതി॒(സ്വാഹാ᳚) || 15 || </td>
+<td class='VargaStyle1'>പരി॒പ്രസോ᳚മതേ॒രസോഽസ॑ർജിക॒ലശേ᳚സു॒തഃ |<span class='RishiDevChandas'>{വിശ്വാമിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ശ്യേ॒നോനത॒ക്തോ,അ॑ർഷതി॒(സ്വാഹാ᳚) || 15 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>പവ॑സ്വസോമമ॒ന്ദയ॒ന്നിന്ദ്രാ᳚യ॒മധു॑മത്തമഃ॒(സ്വാഹാ᳚) || <span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span>16 || <span class='MantraNumbering'>വർഗ:16</span></td>
+<td class='VargaStyle2'>പവ॑സ്വസോമമ॒ന്ദയ॒ന്നിന്ദ്രാ᳚യ॒മധു॑മത്തമഃ॒(സ്വാഹാ᳚) || <span class='RishiDevChandas'>{ജമദഗ്നിഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span>16 || <span class='MantraNumbering'>വർഗ:16</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>അസൃ॑ഗ്രൻ‌ദേ॒വവീ᳚തയേവാജ॒യന്തോ॒രഥാ᳚,ഇവ॒(സ്വാഹാ᳚) || <span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span>17 || </td>
+<td class='VargaStyle2'>അസൃ॑ഗ്രൻ‌ദേ॒വവീ᳚തയേവാജ॒യന്തോ॒രഥാ᳚,ഇവ॒(സ്വാഹാ᳚) || <span class='RishiDevChandas'>{ജമദഗ്നിഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span>17 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തേസു॒താസോ᳚മ॒ദിന്ത॑മാഃശു॒ക്രാവാ॒യുമ॑സൃക്ഷത॒(സ്വാഹാ᳚) || <span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span>18 || </td>
+<td class='VargaStyle2'>തേസു॒താസോ᳚മ॒ദിന്ത॑മാഃശു॒ക്രാവാ॒യുമ॑സൃക്ഷത॒(സ്വാഹാ᳚) || <span class='RishiDevChandas'>{ജമദഗ്നിഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span>18 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഗ്രാവ്ണാ᳚തു॒ന്നോ,അ॒ഭിഷ്ടു॑തഃപ॒വിത്രം᳚സോമഗച്ഛസി |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദധ॑ത്‌സ്തോ॒ത്രേസു॒വീര്യ॒‌മ്(സ്വാഹാ᳚) || 19 || </td>
