--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A07.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format1/RVS-Tamil-F1-A07.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ஶ்ரீ॒ கு³॒ரு॒ப்⁴யோ॒ ந॒ம॒꞉ ஹரி꞉ ௐ ||</h1>
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 07) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{அஷ்டக,அத்⁴யாய,வர்க³,மந்த்ர}{மண்ட³ல,ஸூக்த,மந்த்ர}{மண்ட³ல,அனுவாக,ஸூக்த,மந்த்ர}{ருʼக்ஸம்ʼஹித ஸூக்த ஸங்க்²யா,ருʼக்ஸம்ʼஹித மந்த்ர ஸங்க்²யா}<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -867,55 +867,55 @@
 <td class='VargaStyle1'>த்வம்ʼ ஸோ᳚மாஸி தா⁴ர॒யுர்ம॒ந்த்³ர ஓஜி॑ஷ்டோ², அத்⁴வ॒ரே |<span class='RishiDevChandas'>{ப⁴ரத்³வாஜ꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>பவ॑ஸ்வ மம்ʼஹ॒யத்³ர॑யி꞉ ||<span class='MantraNumbering'>{1/32}{7.2.13.1}{9.67.1}{9.3.7.1}{790, 8269}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>த்வம்ʼ ஸு॒தோ ந்ரு॒ʼமாத³॑னோ த³த⁴॒ன்வான்‌ ம॑த்ஸ॒ரிந்த॑ம꞉ |<span class='RishiDevChandas'>{கஶ்யப꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>இந்த்³ரா᳚ய ஸூ॒ரிரந்த⁴॑ஸா ||<span class='MantraNumbering'>{2/32}{7.2.13.2}{9.67.2}{9.3.7.2}{790, 8270}</span></td>
+<td class='VargaStyle1'>த்வம்ʼ ஸு॒தோ ந்ரு॒ʼமாத³॑னோ த³த⁴॒ன்வான்‌ ம॑த்ஸ॒ரிந்த॑ம꞉ |<span class='RishiDevChandas'>{ப⁴ரத்³வாஜ꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>இந்த்³ரா᳚ய ஸூ॒ரிரந்த⁴॑ஸா ||<span class='MantraNumbering'>{2/32}{7.2.13.2}{9.67.2}{9.3.7.2}{790, 8270}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>த்வம்ʼ ஸு॑ஷ்வா॒ணோ, அத்³ரி॑பி⁴ர॒ப்⁴ய॑ர்ஷ॒ கனி॑க்ரத³த் |<span class='RishiDevChandas'>{கோ³தம꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>த்³யு॒மந்தம்॒ʼ ஶுஷ்ம॑முத்த॒மம் ||<span class='MantraNumbering'>{3/32}{7.2.13.3}{9.67.3}{9.3.7.3}{790, 8271}</span></td>
+<td class='VargaStyle1'>த்வம்ʼ ஸு॑ஷ்வா॒ணோ, அத்³ரி॑பி⁴ர॒ப்⁴ய॑ர்ஷ॒ கனி॑க்ரத³த் |<span class='RishiDevChandas'>{ப⁴ரத்³வாஜ꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>த்³யு॒மந்தம்॒ʼ ஶுஷ்ம॑முத்த॒மம் ||<span class='MantraNumbering'>{3/32}{7.2.13.3}{9.67.3}{9.3.7.3}{790, 8271}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>இந்து³᳚ர்ஹின்வா॒னோ, அ॑ர்ஷதி தி॒ரோ வாரா᳚ண்ய॒வ்யயா᳚ |<span class='RishiDevChandas'>{அத்ரி꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஹரி॒ர்வாஜ॑மசிக்ரத³த் ||<span class='MantraNumbering'>{4/32}{7.2.13.4}{9.67.4}{9.3.7.4}{790, 8272}</span></td>
+<td class='VargaStyle1'>இந்து³᳚ர்ஹின்வா॒னோ, அ॑ர்ஷதி தி॒ரோ வாரா᳚ண்ய॒வ்யயா᳚ |<span class='RishiDevChandas'>{கஶ்யப꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஹரி॒ர்வாஜ॑மசிக்ரத³த் ||<span class='MantraNumbering'>{4/32}{7.2.13.4}{9.67.4}{9.3.7.4}{790, 8272}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>இந்தோ³॒ வ்யவ்ய॑மர்ஷஸி॒ வி ஶ்ரவாம்᳚ʼஸி॒ வி ஸௌப⁴॑கா³ |<span class='RishiDevChandas'>{விஶ்வாமித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>வி வாஜா᳚ன்‌ த்ஸோம॒ கோ³ம॑த꞉ ||<span class='MantraNumbering'>{5/32}{7.2.13.5}{9.67.5}{9.3.7.5}{790, 8273}</span></td>
+<td class='VargaStyle1'>இந்தோ³॒ வ்யவ்ய॑மர்ஷஸி॒ வி ஶ்ரவாம்᳚ʼஸி॒ வி ஸௌப⁴॑கா³ |<span class='RishiDevChandas'>{கஶ்யப꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>வி வாஜா᳚ன்‌ த்ஸோம॒ கோ³ம॑த꞉ ||<span class='MantraNumbering'>{5/32}{7.2.13.5}{9.67.5}{9.3.7.5}{790, 8273}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஆ ந॑ இந்தோ³ ஶத॒க்³வினம்᳚ʼ ர॒யிம்ʼ கோ³ம᳚ந்தம॒ஶ்வின᳚ம் |<span class='RishiDevChandas'>{ஜமத³க்³னி꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ப⁴ரா᳚ ஸோம ஸஹ॒ஸ்ரிண᳚ம் ||<span class='MantraNumbering'>{6/32}{7.2.14.1}{9.67.6}{9.3.7.6}{790, 8274}</span></td>
+<td class='VargaStyle2'>ஆ ந॑ இந்தோ³ ஶத॒க்³வினம்᳚ʼ ர॒யிம்ʼ கோ³ம᳚ந்தம॒ஶ்வின᳚ம் |<span class='RishiDevChandas'>{கஶ்யப꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ப⁴ரா᳚ ஸோம ஸஹ॒ஸ்ரிண᳚ம் ||<span class='MantraNumbering'>{6/32}{7.2.14.1}{9.67.6}{9.3.7.6}{790, 8274}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>பவ॑மானாஸ॒ இந்த³॑வஸ்தி॒ர꞉ ப॒வித்ர॑மா॒ஶவ॑꞉ |<span class='RishiDevChandas'>{வஸிஷ்ட²꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>இந்த்³ரம்॒ʼ யாமே᳚பி⁴ராஶத ||<span class='MantraNumbering'>{7/32}{7.2.14.2}{9.67.7}{9.3.7.7}{790, 8275}</span></td>
+<td class='VargaStyle2'>பவ॑மானாஸ॒ இந்த³॑வஸ்தி॒ர꞉ ப॒வித்ர॑மா॒ஶவ॑꞉ |<span class='RishiDevChandas'>{கோ³தம꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>இந்த்³ரம்॒ʼ யாமே᳚பி⁴ராஶத ||<span class='MantraNumbering'>{7/32}{7.2.14.2}{9.67.7}{9.3.7.7}{790, 8275}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>க॒கு॒ஹ꞉ ஸோ॒ம்யோ ரஸ॒ இந்து³॒ரிந்த்³ரா᳚ய பூ॒ர்வ்ய꞉ |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஆ॒யு꞉ ப॑வத ஆ॒யவே᳚ ||<span class='MantraNumbering'>{8/32}{7.2.14.3}{9.67.8}{9.3.7.8}{790, 8276}</span></td>
+<td class='VargaStyle2'>க॒கு॒ஹ꞉ ஸோ॒ம்யோ ரஸ॒ இந்து³॒ரிந்த்³ரா᳚ய பூ॒ர்வ்ய꞉ |<span class='RishiDevChandas'>{கோ³தம꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஆ॒யு꞉ ப॑வத ஆ॒யவே᳚ ||<span class='MantraNumbering'>{8/32}{7.2.14.3}{9.67.8}{9.3.7.8}{790, 8276}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஹி॒ன்வந்தி॒ ஸூர॒முஸ்ர॑ய॒꞉ பவ॑மானம்ʼ மது⁴॒ஶ்சுத᳚ம் |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>அ॒பி⁴ கி³॒ரா ஸம॑ஸ்வரன் ||<span class='MantraNumbering'>{9/32}{7.2.14.4}{9.67.9}{9.3.7.9}{790, 8277}</span></td>
+<td class='VargaStyle2'>ஹி॒ன்வந்தி॒ ஸூர॒முஸ்ர॑ய॒꞉ பவ॑மானம்ʼ மது⁴॒ஶ்சுத᳚ம் |<span class='RishiDevChandas'>{கோ³தம꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>அ॒பி⁴ கி³॒ரா ஸம॑ஸ்வரன் ||<span class='MantraNumbering'>{9/32}{7.2.14.4}{9.67.9}{9.3.7.9}{790, 8277}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>அ॒வி॒தா நோ᳚, அ॒ஜாஶ்வ॑꞉ பூ॒ஷா யாம॑னியாமனி |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆ ப⁴॑க்ஷத்‌ க॒ன்யா᳚ஸு ந꞉ ||<span class='MantraNumbering'>{10/32}{7.2.14.5}{9.67.10}{9.3.7.10}{790, 8278}</span></td>
+<td class='VargaStyle2'>அ॒வி॒தா நோ᳚, அ॒ஜாஶ்வ॑꞉ பூ॒ஷா யாம॑னியாமனி |<span class='RishiDevChandas'>{அத்ரி꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆ ப⁴॑க்ஷத்‌ க॒ன்யா᳚ஸு ந꞉ ||<span class='MantraNumbering'>{10/32}{7.2.14.5}{9.67.10}{9.3.7.10}{790, 8278}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>அ॒யம்ʼ ஸோம॑꞉ கப॒ர்தி³னே᳚ க்⁴ரு॒ʼதம்ʼ ந ப॑வதே॒ மது⁴॑ |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆ ப⁴॑க்ஷத்‌ க॒ன்யா᳚ஸு ந꞉ ||<span class='MantraNumbering'>{11/32}{7.2.15.1}{9.67.11}{9.3.7.11}{790, 8279}</span></td>
+<td class='VargaStyle1'>அ॒யம்ʼ ஸோம॑꞉ கப॒ர்தி³னே᳚ க்⁴ரு॒ʼதம்ʼ ந ப॑வதே॒ மது⁴॑ |<span class='RishiDevChandas'>{அத்ரி꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆ ப⁴॑க்ஷத்‌ க॒ன்யா᳚ஸு ந꞉ ||<span class='MantraNumbering'>{11/32}{7.2.15.1}{9.67.11}{9.3.7.11}{790, 8279}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>அ॒யம்ʼ த॑ ஆக்⁴ருʼணே ஸு॒தோ க்⁴ரு॒ʼதம்ʼ ந ப॑வதே॒ ஶுசி॑ |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆ ப⁴॑க்ஷத்‌ க॒ன்யா᳚ஸு ந꞉ ||<span class='MantraNumbering'>{12/32}{7.2.15.2}{9.67.12}{9.3.7.12}{790, 8280}</span></td>
+<td class='VargaStyle1'>அ॒யம்ʼ த॑ ஆக்⁴ருʼணே ஸு॒தோ க்⁴ரு॒ʼதம்ʼ ந ப॑வதே॒ ஶுசி॑ |<span class='RishiDevChandas'>{அத்ரி꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆ ப⁴॑க்ஷத்‌ க॒ன்யா᳚ஸு ந꞉ ||<span class='MantraNumbering'>{12/32}{7.2.15.2}{9.67.12}{9.3.7.12}{790, 8280}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>வா॒சோ ஜ॒ந்து꞉ க॑வீ॒நாம்ʼ பவ॑ஸ்வ ஸோம॒ தா⁴ர॑யா |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>தே³॒வேஷு॑ ரத்ன॒தா⁴, அ॑ஸி ||<span class='MantraNumbering'>{13/32}{7.2.15.3}{9.67.13}{9.3.7.13}{790, 8281}</span></td>
+<td class='VargaStyle1'>வா॒சோ ஜ॒ந்து꞉ க॑வீ॒நாம்ʼ பவ॑ஸ்வ ஸோம॒ தா⁴ர॑யா |<span class='RishiDevChandas'>{விஶ்வாமித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>தே³॒வேஷு॑ ரத்ன॒தா⁴, அ॑ஸி ||<span class='MantraNumbering'>{13/32}{7.2.15.3}{9.67.13}{9.3.7.13}{790, 8281}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆ க॒லஶே᳚ஷு தா⁴வதி ஶ்யே॒னோ வர்ம॒ வி கா³᳚ஹதே |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>அ॒பி⁴ த்³ரோணா॒ கனி॑க்ரத³த் ||<span class='MantraNumbering'>{14/32}{7.2.15.4}{9.67.14}{9.3.7.14}{790, 8282}</span></td>
+<td class='VargaStyle1'>ஆ க॒லஶே᳚ஷு தா⁴வதி ஶ்யே॒னோ வர்ம॒ வி கா³᳚ஹதே |<span class='RishiDevChandas'>{விஶ்வாமித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>அ॒பி⁴ த்³ரோணா॒ கனி॑க்ரத³த் ||<span class='MantraNumbering'>{14/32}{7.2.15.4}{9.67.14}{9.3.7.14}{790, 8282}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>பரி॒ ப்ர ஸோ᳚ம தே॒ ரஸோ(அ)ஸ॑ர்ஜி க॒லஶே᳚ ஸு॒த꞉ |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஶ்யே॒னோ ந த॒க்தோ, அ॑ர்ஷதி ||<span class='MantraNumbering'>{15/32}{7.2.15.5}{9.67.15}{9.3.7.15}{790, 8283}</span></td>
+<td class='VargaStyle1'>பரி॒ ப்ர ஸோ᳚ம தே॒ ரஸோ(அ)ஸ॑ர்ஜி க॒லஶே᳚ ஸு॒த꞉ |<span class='RishiDevChandas'>{விஶ்வாமித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஶ்யே॒னோ ந த॒க்தோ, அ॑ர்ஷதி ||<span class='MantraNumbering'>{15/32}{7.2.15.5}{9.67.15}{9.3.7.15}{790, 8283}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>பவ॑ஸ்வ ஸோம ம॒ந்த³ய॒ன்னிந்த்³ரா᳚ய॒ மது⁴॑மத்தம꞉ ||<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span><span class='MantraNumbering'>{16/32}{7.2.16.1}{9.67.16}{9.3.7.16}{790, 8284}</span></td>
+<td class='VargaStyle2'>பவ॑ஸ்வ ஸோம ம॒ந்த³ய॒ன்னிந்த்³ரா᳚ய॒ மது⁴॑மத்தம꞉ ||<span class='RishiDevChandas'>{ஜமத³க்³னி꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span><span class='MantraNumbering'>{16/32}{7.2.16.1}{9.67.16}{9.3.7.16}{790, 8284}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>அஸ்ரு॑ʼக்³ரன்‌ தே³॒வவீ᳚தயே வாஜ॒யந்தோ॒ ரதா²᳚, இவ ||<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span><span class='MantraNumbering'>{17/32}{7.2.16.2}{9.67.17}{9.3.7.17}{790, 8285}</span></td>
+<td class='VargaStyle2'>அஸ்ரு॑ʼக்³ரன்‌ தே³॒வவீ᳚தயே வாஜ॒யந்தோ॒ ரதா²᳚, இவ ||<span class='RishiDevChandas'>{ஜமத³க்³னி꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span><span class='MantraNumbering'>{17/32}{7.2.16.2}{9.67.17}{9.3.7.17}{790, 8285}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தே ஸு॒தாஸோ᳚ ம॒தி³ந்த॑மா꞉ ஶு॒க்ரா வா॒யும॑ஸ்ருʼக்ஷத ||<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span><span class='MantraNumbering'>{18/32}{7.2.16.3}{9.67.18}{9.3.7.18}{790, 8286}</span></td>
+<td class='VargaStyle2'>தே ஸு॒தாஸோ᳚ ம॒தி³ந்த॑மா꞉ ஶு॒க்ரா வா॒யும॑ஸ்ருʼக்ஷத ||<span class='RishiDevChandas'>{ஜமத³க்³னி꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span><span class='MantraNumbering'>{18/32}{7.2.16.3}{9.67.18}{9.3.7.18}{790, 8286}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>க்³ராவ்ணா᳚ து॒ன்னோ, அ॒பி⁴ஷ்டு॑த꞉ ப॒வித்ரம்᳚ʼ ஸோம க³ச்ச²ஸி |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>த³த⁴॑த்‌ ஸ்தோ॒த்ரே ஸு॒வீர்ய᳚ம் ||<span class='MantraNumbering'>{19/32}{7.2.16.4}{9.67.19}{9.3.7.19}{790, 8287}</span></td>
