--- a/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A07.html
+++ b/Rigveda/SamhitaPatha/Tamil/Ashtaka/Format4/RVS-Tamil-F4-A07.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ருʼக்³வேத³ ஸம்ʼஹிதா (அஷ்டக: 07) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -869,55 +869,55 @@
 <td class='VargaStyle1'>த்வம்ʼஸோ᳚மாஸிதா⁴ர॒யுர்ம॒ந்த்³ரஓஜி॑ஷ்டோ²,அத்⁴வ॒ரே |<span class='RishiDevChandas'>{ப⁴ரத்³வாஜ꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>பவ॑ஸ்வமம்ʼஹ॒யத்³ர॑யி॒꞉(ஸ்வாஹா᳚) || 1 || <span class='MantraNumbering'>வர்க³:13</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>த்வம்ʼஸு॒தோந்ரு॒ʼமாத³॑னோத³த⁴॒ன்வான்‌ம॑த்ஸ॒ரிந்த॑ம꞉ |<span class='RishiDevChandas'>{கஶ்யப꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>இந்த்³ரா᳚யஸூ॒ரிரந்த⁴॑ஸா॒(ஸ்வாஹா᳚) || 2 || </td>
+<td class='VargaStyle1'>த்வம்ʼஸு॒தோந்ரு॒ʼமாத³॑னோத³த⁴॒ன்வான்‌ம॑த்ஸ॒ரிந்த॑ம꞉ |<span class='RishiDevChandas'>{ப⁴ரத்³வாஜ꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>இந்த்³ரா᳚யஸூ॒ரிரந்த⁴॑ஸா॒(ஸ்வாஹா᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>த்வம்ʼஸு॑ஷ்வா॒ணோ,அத்³ரி॑பி⁴ர॒ப்⁴ய॑ர்ஷ॒கனி॑க்ரத³த் |<span class='RishiDevChandas'>{கோ³தம꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>த்³யு॒மந்தம்॒ʼஶுஷ்ம॑முத்த॒மம்(ஸ்வாஹா᳚) || 3 || </td>
+<td class='VargaStyle1'>த்வம்ʼஸு॑ஷ்வா॒ணோ,அத்³ரி॑பி⁴ர॒ப்⁴ய॑ர்ஷ॒கனி॑க்ரத³த் |<span class='RishiDevChandas'>{ப⁴ரத்³வாஜ꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>த்³யு॒மந்தம்॒ʼஶுஷ்ம॑முத்த॒மம்(ஸ்வாஹா᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>இந்து³᳚ர்ஹின்வா॒னோ,அ॑ர்ஷதிதி॒ரோவாரா᳚ண்ய॒வ்யயா᳚ |<span class='RishiDevChandas'>{அத்ரி꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஹரி॒ர்வாஜ॑மசிக்ரத³॒‌த்(ஸ்வாஹா᳚) || 4 || </td>
+<td class='VargaStyle1'>இந்து³᳚ர்ஹின்வா॒னோ,அ॑ர்ஷதிதி॒ரோவாரா᳚ண்ய॒வ்யயா᳚ |<span class='RishiDevChandas'>{கஶ்யப꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஹரி॒ர்வாஜ॑மசிக்ரத³॒‌த்(ஸ்வாஹா᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>இந்தோ³॒வ்யவ்ய॑மர்ஷஸி॒விஶ்ரவாம்᳚ʼஸி॒விஸௌப⁴॑கா³ |<span class='RishiDevChandas'>{விஶ்வாமித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>விவாஜா᳚ன்‌த்ஸோம॒கோ³ம॑த॒꞉(ஸ்வாஹா᳚) || 5 || </td>
+<td class='VargaStyle1'>இந்தோ³॒வ்யவ்ய॑மர்ஷஸி॒விஶ்ரவாம்᳚ʼஸி॒விஸௌப⁴॑கா³ |<span class='RishiDevChandas'>{கஶ்யப꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>விவாஜா᳚ன்‌த்ஸோம॒கோ³ம॑த॒꞉(ஸ்வாஹா᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஆந॑இந்தோ³ஶத॒க்³வினம்᳚ʼர॒யிம்ʼகோ³ம᳚ந்தம॒ஶ்வின᳚ம் |<span class='RishiDevChandas'>{ஜமத³க்³னி꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ப⁴ரா᳚ஸோமஸஹ॒ஸ்ரிண॒‌ம்(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:14</span></td>
+<td class='VargaStyle2'>ஆந॑இந்தோ³ஶத॒க்³வினம்᳚ʼர॒யிம்ʼகோ³ம᳚ந்தம॒ஶ்வின᳚ம் |<span class='RishiDevChandas'>{கஶ்யப꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ப⁴ரா᳚ஸோமஸஹ॒ஸ்ரிண॒‌ம்(ஸ்வாஹா᳚) || 6 || <span class='MantraNumbering'>வர்க³:14</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>பவ॑மானாஸ॒இந்த³॑வஸ்தி॒ர꞉ப॒வித்ர॑மா॒ஶவ॑꞉ |<span class='RishiDevChandas'>{வஸிஷ்ட²꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>இந்த்³ரம்॒ʼயாமே᳚பி⁴ராஶத॒(ஸ்வாஹா᳚) || 7 || </td>
+<td class='VargaStyle2'>பவ॑மானாஸ॒இந்த³॑வஸ்தி॒ர꞉ப॒வித்ர॑மா॒ஶவ॑꞉ |<span class='RishiDevChandas'>{கோ³தம꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>இந்த்³ரம்॒ʼயாமே᳚பி⁴ராஶத॒(ஸ்வாஹா᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>க॒கு॒ஹ꞉ஸோ॒ம்யோரஸ॒இந்து³॒ரிந்த்³ரா᳚யபூ॒ர்வ்ய꞉ |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஆ॒யு꞉ப॑வதஆ॒யவே॒(ஸ்வாஹா᳚) || 8 || </td>
+<td class='VargaStyle2'>க॒கு॒ஹ꞉ஸோ॒ம்யோரஸ॒இந்து³॒ரிந்த்³ரா᳚யபூ॒ர்வ்ய꞉ |<span class='RishiDevChandas'>{கோ³தம꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஆ॒யு꞉ப॑வதஆ॒யவே॒(ஸ்வாஹா᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ஹி॒ன்வந்தி॒ஸூர॒முஸ்ர॑ய॒꞉பவ॑மானம்ʼமது⁴॒ஶ்சுத᳚ம் |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>அ॒பி⁴கி³॒ராஸம॑ஸ்வர॒‌ந்(ஸ்வாஹா᳚) || 9 || </td>
+<td class='VargaStyle2'>ஹி॒ன்வந்தி॒ஸூர॒முஸ்ர॑ய॒꞉பவ॑மானம்ʼமது⁴॒ஶ்சுத᳚ம் |<span class='RishiDevChandas'>{கோ³தம꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>அ॒பி⁴கி³॒ராஸம॑ஸ்வர॒‌ந்(ஸ்வாஹா᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>அ॒வி॒தாநோ᳚,அ॒ஜாஶ்வ॑꞉பூ॒ஷாயாம॑னியாமனி |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆப⁴॑க்ஷத்‌க॒ன்யா᳚ஸுந॒꞉(ஸ்வாஹா᳚) || 10 || </td>
+<td class='VargaStyle2'>அ॒வி॒தாநோ᳚,அ॒ஜாஶ்வ॑꞉பூ॒ஷாயாம॑னியாமனி |<span class='RishiDevChandas'>{அத்ரி꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆப⁴॑க்ஷத்‌க॒ன்யா᳚ஸுந॒꞉(ஸ்வாஹா᳚) || 10 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>அ॒யம்ʼஸோம॑꞉கப॒ர்தி³னே᳚க்⁴ரு॒ʼதம்ʼநப॑வதே॒மது⁴॑ |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆப⁴॑க்ஷத்‌க॒ன்யா᳚ஸுந॒꞉(ஸ்வாஹா᳚) || 11 || <span class='MantraNumbering'>வர்க³:15</span></td>
+<td class='VargaStyle1'>அ॒யம்ʼஸோம॑꞉கப॒ர்தி³னே᳚க்⁴ரு॒ʼதம்ʼநப॑வதே॒மது⁴॑ |<span class='RishiDevChandas'>{அத்ரி꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆப⁴॑க்ஷத்‌க॒ன்யா᳚ஸுந॒꞉(ஸ்வாஹா᳚) || 11 || <span class='MantraNumbering'>வர்க³:15</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>அ॒யம்ʼத॑ஆக்⁴ருʼணேஸு॒தோக்⁴ரு॒ʼதம்ʼநப॑வதே॒ஶுசி॑ |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆப⁴॑க்ஷத்‌க॒ன்யா᳚ஸுந॒꞉(ஸ்வாஹா᳚) || 12 || </td>
+<td class='VargaStyle1'>அ॒யம்ʼத॑ஆக்⁴ருʼணேஸு॒தோக்⁴ரு॒ʼதம்ʼநப॑வதே॒ஶுசி॑ |<span class='RishiDevChandas'>{அத்ரி꞉ | பவமான꞉ ஸோம꞉ பூஷா வா | கா³யத்ரீ}</span><p>ஆப⁴॑க்ஷத்‌க॒ன்யா᳚ஸுந॒꞉(ஸ்வாஹா᳚) || 12 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>வா॒சோஜ॒ந்து꞉க॑வீ॒நாம்ʼபவ॑ஸ்வஸோம॒தா⁴ர॑யா |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>தே³॒வேஷு॑ரத்ன॒தா⁴,அ॑ஸி॒(ஸ்வாஹா᳚) || 13 || </td>
+<td class='VargaStyle1'>வா॒சோஜ॒ந்து꞉க॑வீ॒நாம்ʼபவ॑ஸ்வஸோம॒தா⁴ர॑யா |<span class='RishiDevChandas'>{விஶ்வாமித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>தே³॒வேஷு॑ரத்ன॒தா⁴,அ॑ஸி॒(ஸ்வாஹா᳚) || 13 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ஆக॒லஶே᳚ஷுதா⁴வதிஶ்யே॒னோவர்ம॒விகா³᳚ஹதே |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>அ॒பி⁴த்³ரோணா॒கனி॑க்ரத³॒‌த்(ஸ்வாஹா᳚) || 14 || </td>
+<td class='VargaStyle1'>ஆக॒லஶே᳚ஷுதா⁴வதிஶ்யே॒னோவர்ம॒விகா³᳚ஹதே |<span class='RishiDevChandas'>{விஶ்வாமித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>அ॒பி⁴த்³ரோணா॒கனி॑க்ரத³॒‌த்(ஸ்வாஹா᳚) || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>பரி॒ப்ரஸோ᳚மதே॒ரஸோ(அ)ஸ॑ர்ஜிக॒லஶே᳚ஸு॒த꞉ |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஶ்யே॒னோநத॒க்தோ,அ॑ர்ஷதி॒(ஸ்வாஹா᳚) || 15 || </td>
+<td class='VargaStyle1'>பரி॒ப்ரஸோ᳚மதே॒ரஸோ(அ)ஸ॑ர்ஜிக॒லஶே᳚ஸு॒த꞉ |<span class='RishiDevChandas'>{விஶ்வாமித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>ஶ்யே॒னோநத॒க்தோ,அ॑ர்ஷதி॒(ஸ்வாஹா᳚) || 15 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>பவ॑ஸ்வஸோமம॒ந்த³ய॒ன்னிந்த்³ரா᳚ய॒மது⁴॑மத்தம॒꞉(ஸ்வாஹா᳚) || <span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span>16 || <span class='MantraNumbering'>வர்க³:16</span></td>
+<td class='VargaStyle2'>பவ॑ஸ்வஸோமம॒ந்த³ய॒ன்னிந்த்³ரா᳚ய॒மது⁴॑மத்தம॒꞉(ஸ்வாஹா᳚) || <span class='RishiDevChandas'>{ஜமத³க்³னி꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span>16 || <span class='MantraNumbering'>வர்க³:16</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>அஸ்ரு॑ʼக்³ரன்‌தே³॒வவீ᳚தயேவாஜ॒யந்தோ॒ரதா²᳚,இவ॒(ஸ்வாஹா᳚) || <span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span>17 || </td>
+<td class='VargaStyle2'>அஸ்ரு॑ʼக்³ரன்‌தே³॒வவீ᳚தயேவாஜ॒யந்தோ॒ரதா²᳚,இவ॒(ஸ்வாஹா᳚) || <span class='RishiDevChandas'>{ஜமத³க்³னி꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span>17 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>தேஸு॒தாஸோ᳚ம॒தி³ந்த॑மா꞉ஶு॒க்ராவா॒யும॑ஸ்ருʼக்ஷத॒(ஸ்வாஹா᳚) || <span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span>18 || </td>
+<td class='VargaStyle2'>தேஸு॒தாஸோ᳚ம॒தி³ந்த॑மா꞉ஶு॒க்ராவா॒யும॑ஸ்ருʼக்ஷத॒(ஸ்வாஹா᳚) || <span class='RishiDevChandas'>{ஜமத³க்³னி꞉ | பவமான꞉ ஸோம꞉ | த்³விபதா³ கா³யத்ரீ}</span>18 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>க்³ராவ்ணா᳚து॒ன்னோ,அ॒பி⁴ஷ்டு॑த꞉ப॒வித்ரம்᳚ʼஸோமக³ச்ச²ஸி |<span class='RishiDevChandas'>{ஆங்கி³ரஸ꞉ பவித்ர꞉ | பவமான꞉ ஸோம꞉ | கா³யத்ரீ}</span><p>த³த⁴॑த்‌ஸ்தோ॒த்ரேஸு॒வீர்ய॒‌ம்(ஸ்வாஹா᳚) || 19 || </td>
