--- a/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format4/RVS-Telugu-F4-A07.html
+++ b/Rigveda/SamhitaPatha/Telugu/Ashtaka/Format4/RVS-Telugu-F4-A07.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (అష్టక: 07) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -869,55 +869,55 @@
 <td class='VargaStyle1'>త్వంసో᳚మాసిధార॒యుర్మం॒ద్రఓజి॑ష్ఠో,అధ్వ॒రే |<span class='RishiDevChandas'>{భరద్వాజః | పవమానః సోమః | గాయత్రీ}</span><p>పవ॑స్వమంహ॒యద్ర॑యిః॒(స్వాహా᳚) || 1 || <span class='MantraNumbering'>వర్గ:13</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>త్వంసు॒తోనృ॒మాద॑నోదధ॒న్వాన్‌మ॑త్స॒రింత॑మః |<span class='RishiDevChandas'>{కశ్యపః | పవమానః సోమః | గాయత్రీ}</span><p>ఇంద్రా᳚యసూ॒రిరంధ॑సా॒(స్వాహా᳚) || 2 || </td>
+<td class='VargaStyle1'>త్వంసు॒తోనృ॒మాద॑నోదధ॒న్వాన్‌మ॑త్స॒రింత॑మః |<span class='RishiDevChandas'>{భరద్వాజః | పవమానః సోమః | గాయత్రీ}</span><p>ఇంద్రా᳚యసూ॒రిరంధ॑సా॒(స్వాహా᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>త్వంసు॑ష్వా॒ణో,అద్రి॑భిర॒భ్య॑ర్ష॒కని॑క్రదత్ |<span class='RishiDevChandas'>{గోతమః | పవమానః సోమః | గాయత్రీ}</span><p>ద్యు॒మంతం॒శుష్మ॑ముత్త॒మం(స్వాహా᳚) || 3 || </td>
+<td class='VargaStyle1'>త్వంసు॑ష్వా॒ణో,అద్రి॑భిర॒భ్య॑ర్ష॒కని॑క్రదత్ |<span class='RishiDevChandas'>{భరద్వాజః | పవమానః సోమః | గాయత్రీ}</span><p>ద్యు॒మంతం॒శుష్మ॑ముత్త॒మం(స్వాహా᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఇందు᳚ర్హిన్వా॒నో,అ॑ర్షతితి॒రోవారా᳚ణ్య॒వ్యయా᳚ |<span class='RishiDevChandas'>{అత్రిః | పవమానః సోమః | గాయత్రీ}</span><p>హరి॒ర్వాజ॑మచిక్రద॒‌త్(స్వాహా᳚) || 4 || </td>
+<td class='VargaStyle1'>ఇందు᳚ర్హిన్వా॒నో,అ॑ర్షతితి॒రోవారా᳚ణ్య॒వ్యయా᳚ |<span class='RishiDevChandas'>{కశ్యపః | పవమానః సోమః | గాయత్రీ}</span><p>హరి॒ర్వాజ॑మచిక్రద॒‌త్(స్వాహా᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఇందో॒వ్యవ్య॑మర్షసి॒విశ్రవాం᳚సి॒విసౌభ॑గా |<span class='RishiDevChandas'>{విశ్వామిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>వివాజా᳚న్‌త్సోమ॒గోమ॑తః॒(స్వాహా᳚) || 5 || </td>
+<td class='VargaStyle1'>ఇందో॒వ్యవ్య॑మర్షసి॒విశ్రవాం᳚సి॒విసౌభ॑గా |<span class='RishiDevChandas'>{కశ్యపః | పవమానః సోమః | గాయత్రీ}</span><p>వివాజా᳚న్‌త్సోమ॒గోమ॑తః॒(స్వాహా᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఆన॑ఇందోశత॒గ్వినం᳚ర॒యింగోమం᳚తమ॒శ్వినం᳚ |<span class='RishiDevChandas'>{జమదగ్నిః | పవమానః సోమః | గాయత్రీ}</span><p>భరా᳚సోమసహ॒స్రిణ॒‌మ్(స్వాహా᳚) || 6 || <span class='MantraNumbering'>వర్గ:14</span></td>
+<td class='VargaStyle2'>ఆన॑ఇందోశత॒గ్వినం᳚ర॒యింగోమం᳚తమ॒శ్వినం᳚ |<span class='RishiDevChandas'>{కశ్యపః | పవమానః సోమః | గాయత్రీ}</span><p>భరా᳚సోమసహ॒స్రిణ॒‌మ్(స్వాహా᳚) || 6 || <span class='MantraNumbering'>వర్గ:14</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>పవ॑మానాస॒ఇంద॑వస్తి॒రఃప॒విత్ర॑మా॒శవః॑ |<span class='RishiDevChandas'>{వసిష్ఠః | పవమానః సోమః | గాయత్రీ}</span><p>ఇంద్రం॒యామే᳚భిరాశత॒(స్వాహా᳚) || 7 || </td>
+<td class='VargaStyle2'>పవ॑మానాస॒ఇంద॑వస్తి॒రఃప॒విత్ర॑మా॒శవః॑ |<span class='RishiDevChandas'>{గోతమః | పవమానః సోమః | గాయత్రీ}</span><p>ఇంద్రం॒యామే᳚భిరాశత॒(స్వాహా᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>క॒కు॒హఃసో॒మ్యోరస॒ఇందు॒రింద్రా᳚యపూ॒ర్వ్యః |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>ఆ॒యుఃప॑వతఆ॒యవే॒(స్వాహా᳚) || 8 || </td>
+<td class='VargaStyle2'>క॒కు॒హఃసో॒మ్యోరస॒ఇందు॒రింద్రా᳚యపూ॒ర్వ్యః |<span class='RishiDevChandas'>{గోతమః | పవమానః సోమః | గాయత్రీ}</span><p>ఆ॒యుఃప॑వతఆ॒యవే॒(స్వాహా᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>హి॒న్వంతి॒సూర॒ముస్ర॑యః॒పవ॑మానంమధు॒శ్చుతం᳚ |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>అ॒భిగి॒రాసమ॑స్వర॒‌న్(స్వాహా᳚) || 9 || </td>
+<td class='VargaStyle2'>హి॒న్వంతి॒సూర॒ముస్ర॑యః॒పవ॑మానంమధు॒శ్చుతం᳚ |<span class='RishiDevChandas'>{గోతమః | పవమానః సోమః | గాయత్రీ}</span><p>అ॒భిగి॒రాసమ॑స్వర॒‌న్(స్వాహా᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>అ॒వి॒తానో᳚,అ॒జాశ్వః॑పూ॒షాయామ॑నియామని |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆభ॑క్షత్‌క॒న్యా᳚సునః॒(స్వాహా᳚) || 10 || </td>
+<td class='VargaStyle2'>అ॒వి॒తానో᳚,అ॒జాశ్వః॑పూ॒షాయామ॑నియామని |<span class='RishiDevChandas'>{అత్రిః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆభ॑క్షత్‌క॒న్యా᳚సునః॒(స్వాహా᳚) || 10 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>అ॒యంసోమః॑కప॒ర్దినే᳚ఘృ॒తంనప॑వతే॒మధు॑ |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆభ॑క్షత్‌క॒న్యా᳚సునః॒(స్వాహా᳚) || 11 || <span class='MantraNumbering'>వర్గ:15</span></td>
+<td class='VargaStyle1'>అ॒యంసోమః॑కప॒ర్దినే᳚ఘృ॒తంనప॑వతే॒మధు॑ |<span class='RishiDevChandas'>{అత్రిః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆభ॑క్షత్‌క॒న్యా᳚సునః॒(స్వాహా᳚) || 11 || <span class='MantraNumbering'>వర్గ:15</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>అ॒యంత॑ఆఘృణేసు॒తోఘృ॒తంనప॑వతే॒శుచి॑ |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆభ॑క్షత్‌క॒న్యా᳚సునః॒(స్వాహా᳚) || 12 || </td>
+<td class='VargaStyle1'>అ॒యంత॑ఆఘృణేసు॒తోఘృ॒తంనప॑వతే॒శుచి॑ |<span class='RishiDevChandas'>{అత్రిః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆభ॑క్షత్‌క॒న్యా᳚సునః॒(స్వాహా᳚) || 12 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>వా॒చోజం॒తుఃక॑వీ॒నాంపవ॑స్వసోమ॒ధార॑యా |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>దే॒వేషు॑రత్న॒ధా,అ॑సి॒(స్వాహా᳚) || 13 || </td>
+<td class='VargaStyle1'>వా॒చోజం॒తుఃక॑వీ॒నాంపవ॑స్వసోమ॒ధార॑యా |<span class='RishiDevChandas'>{విశ్వామిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>దే॒వేషు॑రత్న॒ధా,అ॑సి॒(స్వాహా᳚) || 13 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆక॒లశే᳚షుధావతిశ్యే॒నోవర్మ॒విగా᳚హతే |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>అ॒భిద్రోణా॒కని॑క్రద॒‌త్(స్వాహా᳚) || 14 || </td>
+<td class='VargaStyle1'>ఆక॒లశే᳚షుధావతిశ్యే॒నోవర్మ॒విగా᳚హతే |<span class='RishiDevChandas'>{విశ్వామిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>అ॒భిద్రోణా॒కని॑క్రద॒‌త్(స్వాహా᳚) || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>పరి॒ప్రసో᳚మతే॒రసోఽస॑ర్జిక॒లశే᳚సు॒తః |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>శ్యే॒నోనత॒క్తో,అ॑ర్షతి॒(స్వాహా᳚) || 15 || </td>
+<td class='VargaStyle1'>పరి॒ప్రసో᳚మతే॒రసోఽస॑ర్జిక॒లశే᳚సు॒తః |<span class='RishiDevChandas'>{విశ్వామిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>శ్యే॒నోనత॒క్తో,అ॑ర్షతి॒(స్వాహా᳚) || 15 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>పవ॑స్వసోమమం॒దయ॒న్నింద్రా᳚య॒మధు॑మత్తమః॒(స్వాహా᳚) || <span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span>16 || <span class='MantraNumbering'>వర్గ:16</span></td>
+<td class='VargaStyle2'>పవ॑స్వసోమమం॒దయ॒న్నింద్రా᳚య॒మధు॑మత్తమః॒(స్వాహా᳚) || <span class='RishiDevChandas'>{జమదగ్నిః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span>16 || <span class='MantraNumbering'>వర్గ:16</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>అసృ॑గ్రన్‌దే॒వవీ᳚తయేవాజ॒యంతో॒రథా᳚,ఇవ॒(స్వాహా᳚) || <span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span>17 || </td>
+<td class='VargaStyle2'>అసృ॑గ్రన్‌దే॒వవీ᳚తయేవాజ॒యంతో॒రథా᳚,ఇవ॒(స్వాహా᳚) || <span class='RishiDevChandas'>{జమదగ్నిః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span>17 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తేసు॒తాసో᳚మ॒దింత॑మాఃశు॒క్రావా॒యుమ॑సృక్షత॒(స్వాహా᳚) || <span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span>18 || </td>
+<td class='VargaStyle2'>తేసు॒తాసో᳚మ॒దింత॑మాఃశు॒క్రావా॒యుమ॑సృక్షత॒(స్వాహా᳚) || <span class='RishiDevChandas'>{జమదగ్నిః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span>18 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>గ్రావ్ణా᳚తు॒న్నో,అ॒భిష్టు॑తఃప॒విత్రం᳚సోమగచ్ఛసి |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>దధ॑త్‌స్తో॒త్రేసు॒వీర్య॒‌మ్(స్వాహా᳚) || 19 || </td>
