--- a/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M09.html
+++ b/Rigveda/SamhitaPatha/Telugu/Mandala/Format1/RVS-Telugu-F1-M09.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| శ్రీ॒ గు॒రు॒భ్యో॒ న॒మః॒ హరిః ఓం ||</h1>
 <h2 class='simpHtmlH1'>|| ఋగ్వేద సంహితా (మండల: 09) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{మండల,సూక్త,మంత్ర}{మండల,అనువాక,సూక్త,మంత్ర}{అష్టక,అధ్యాయ,వర్గ,మంత్ర}{ఋక్సంహిత సూక్త సంఖ్యా,ఋక్సంహిత మంత్ర సంఖ్యా}<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1950,55 +1950,55 @@
 <td class='VargaStyle1'>త్వం సో᳚మాసి ధార॒యుర్మం॒ద్ర ఓజి॑ష్ఠో, అధ్వ॒రే |<span class='RishiDevChandas'>{భరద్వాజః | పవమానః సోమః | గాయత్రీ}</span><p>పవ॑స్వ మంహ॒యద్ర॑యిః ||<span class='MantraNumbering'>{1/32}{9.67.1}{9.3.7.1}{7.2.13.1}{790, 8269}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>త్వం సు॒తో నృ॒మాద॑నో దధ॒న్వాన్‌ మ॑త్స॒రింత॑మః |<span class='RishiDevChandas'>{కశ్యపః | పవమానః సోమః | గాయత్రీ}</span><p>ఇంద్రా᳚య సూ॒రిరంధ॑సా ||<span class='MantraNumbering'>{2/32}{9.67.2}{9.3.7.2}{7.2.13.2}{790, 8270}</span></td>
+<td class='VargaStyle1'>త్వం సు॒తో నృ॒మాద॑నో దధ॒న్వాన్‌ మ॑త్స॒రింత॑మః |<span class='RishiDevChandas'>{భరద్వాజః | పవమానః సోమః | గాయత్రీ}</span><p>ఇంద్రా᳚య సూ॒రిరంధ॑సా ||<span class='MantraNumbering'>{2/32}{9.67.2}{9.3.7.2}{7.2.13.2}{790, 8270}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>త్వం సు॑ష్వా॒ణో, అద్రి॑భిర॒భ్య॑ర్ష॒ కని॑క్రదత్ |<span class='RishiDevChandas'>{గోతమః | పవమానః సోమః | గాయత్రీ}</span><p>ద్యు॒మంతం॒ శుష్మ॑ముత్త॒మం ||<span class='MantraNumbering'>{3/32}{9.67.3}{9.3.7.3}{7.2.13.3}{790, 8271}</span></td>
+<td class='VargaStyle1'>త్వం సు॑ష్వా॒ణో, అద్రి॑భిర॒భ్య॑ర్ష॒ కని॑క్రదత్ |<span class='RishiDevChandas'>{భరద్వాజః | పవమానః సోమః | గాయత్రీ}</span><p>ద్యు॒మంతం॒ శుష్మ॑ముత్త॒మం ||<span class='MantraNumbering'>{3/32}{9.67.3}{9.3.7.3}{7.2.13.3}{790, 8271}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఇందు᳚ర్హిన్వా॒నో, అ॑ర్షతి తి॒రో వారా᳚ణ్య॒వ్యయా᳚ |<span class='RishiDevChandas'>{అత్రిః | పవమానః సోమః | గాయత్రీ}</span><p>హరి॒ర్వాజ॑మచిక్రదత్ ||<span class='MantraNumbering'>{4/32}{9.67.4}{9.3.7.4}{7.2.13.4}{790, 8272}</span></td>
+<td class='VargaStyle1'>ఇందు᳚ర్హిన్వా॒నో, అ॑ర్షతి తి॒రో వారా᳚ణ్య॒వ్యయా᳚ |<span class='RishiDevChandas'>{కశ్యపః | పవమానః సోమః | గాయత్రీ}</span><p>హరి॒ర్వాజ॑మచిక్రదత్ ||<span class='MantraNumbering'>{4/32}{9.67.4}{9.3.7.4}{7.2.13.4}{790, 8272}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఇందో॒ వ్యవ్య॑మర్షసి॒ వి శ్రవాం᳚సి॒ వి సౌభ॑గా |<span class='RishiDevChandas'>{విశ్వామిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>వి వాజా᳚న్‌ త్సోమ॒ గోమ॑తః ||<span class='MantraNumbering'>{5/32}{9.67.5}{9.3.7.5}{7.2.13.5}{790, 8273}</span></td>
+<td class='VargaStyle1'>ఇందో॒ వ్యవ్య॑మర్షసి॒ వి శ్రవాం᳚సి॒ వి సౌభ॑గా |<span class='RishiDevChandas'>{కశ్యపః | పవమానః సోమః | గాయత్రీ}</span><p>వి వాజా᳚న్‌ త్సోమ॒ గోమ॑తః ||<span class='MantraNumbering'>{5/32}{9.67.5}{9.3.7.5}{7.2.13.5}{790, 8273}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ఆ న॑ ఇందో శత॒గ్వినం᳚ ర॒యిం గోమం᳚తమ॒శ్వినం᳚ |<span class='RishiDevChandas'>{జమదగ్నిః | పవమానః సోమః | గాయత్రీ}</span><p>భరా᳚ సోమ సహ॒స్రిణం᳚ ||<span class='MantraNumbering'>{6/32}{9.67.6}{9.3.7.6}{7.2.14.1}{790, 8274}</span></td>
+<td class='VargaStyle2'>ఆ న॑ ఇందో శత॒గ్వినం᳚ ర॒యిం గోమం᳚తమ॒శ్వినం᳚ |<span class='RishiDevChandas'>{కశ్యపః | పవమానః సోమః | గాయత్రీ}</span><p>భరా᳚ సోమ సహ॒స్రిణం᳚ ||<span class='MantraNumbering'>{6/32}{9.67.6}{9.3.7.6}{7.2.14.1}{790, 8274}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>పవ॑మానాస॒ ఇంద॑వస్తి॒రః ప॒విత్ర॑మా॒శవః॑ |<span class='RishiDevChandas'>{వసిష్ఠః | పవమానః సోమః | గాయత్రీ}</span><p>ఇంద్రం॒ యామే᳚భిరాశత ||<span class='MantraNumbering'>{7/32}{9.67.7}{9.3.7.7}{7.2.14.2}{790, 8275}</span></td>
+<td class='VargaStyle2'>పవ॑మానాస॒ ఇంద॑వస్తి॒రః ప॒విత్ర॑మా॒శవః॑ |<span class='RishiDevChandas'>{గోతమః | పవమానః సోమః | గాయత్రీ}</span><p>ఇంద్రం॒ యామే᳚భిరాశత ||<span class='MantraNumbering'>{7/32}{9.67.7}{9.3.7.7}{7.2.14.2}{790, 8275}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>క॒కు॒హః సో॒మ్యో రస॒ ఇందు॒రింద్రా᳚య పూ॒ర్వ్యః |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>ఆ॒యుః ప॑వత ఆ॒యవే᳚ ||<span class='MantraNumbering'>{8/32}{9.67.8}{9.3.7.8}{7.2.14.3}{790, 8276}</span></td>
+<td class='VargaStyle2'>క॒కు॒హః సో॒మ్యో రస॒ ఇందు॒రింద్రా᳚య పూ॒ర్వ్యః |<span class='RishiDevChandas'>{గోతమః | పవమానః సోమః | గాయత్రీ}</span><p>ఆ॒యుః ప॑వత ఆ॒యవే᳚ ||<span class='MantraNumbering'>{8/32}{9.67.8}{9.3.7.8}{7.2.14.3}{790, 8276}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>హి॒న్వంతి॒ సూర॒ముస్ర॑యః॒ పవ॑మానం మధు॒శ్చుతం᳚ |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>అ॒భి గి॒రా సమ॑స్వరన్ ||<span class='MantraNumbering'>{9/32}{9.67.9}{9.3.7.9}{7.2.14.4}{790, 8277}</span></td>
+<td class='VargaStyle2'>హి॒న్వంతి॒ సూర॒ముస్ర॑యః॒ పవ॑మానం మధు॒శ్చుతం᳚ |<span class='RishiDevChandas'>{గోతమః | పవమానః సోమః | గాయత్రీ}</span><p>అ॒భి గి॒రా సమ॑స్వరన్ ||<span class='MantraNumbering'>{9/32}{9.67.9}{9.3.7.9}{7.2.14.4}{790, 8277}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>అ॒వి॒తా నో᳚, అ॒జాశ్వః॑ పూ॒షా యామ॑నియామని |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆ భ॑క్షత్‌ క॒న్యా᳚సు నః ||<span class='MantraNumbering'>{10/32}{9.67.10}{9.3.7.10}{7.2.14.5}{790, 8278}</span></td>
+<td class='VargaStyle2'>అ॒వి॒తా నో᳚, అ॒జాశ్వః॑ పూ॒షా యామ॑నియామని |<span class='RishiDevChandas'>{అత్రిః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆ భ॑క్షత్‌ క॒న్యా᳚సు నః ||<span class='MantraNumbering'>{10/32}{9.67.10}{9.3.7.10}{7.2.14.5}{790, 8278}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>అ॒యం సోమః॑ కప॒ర్దినే᳚ ఘృ॒తం న ప॑వతే॒ మధు॑ |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆ భ॑క్షత్‌ క॒న్యా᳚సు నః ||<span class='MantraNumbering'>{11/32}{9.67.11}{9.3.7.11}{7.2.15.1}{790, 8279}</span></td>
+<td class='VargaStyle1'>అ॒యం సోమః॑ కప॒ర్దినే᳚ ఘృ॒తం న ప॑వతే॒ మధు॑ |<span class='RishiDevChandas'>{అత్రిః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆ భ॑క్షత్‌ క॒న్యా᳚సు నః ||<span class='MantraNumbering'>{11/32}{9.67.11}{9.3.7.11}{7.2.15.1}{790, 8279}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>అ॒యం త॑ ఆఘృణే సు॒తో ఘృ॒తం న ప॑వతే॒ శుచి॑ |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆ భ॑క్షత్‌ క॒న్యా᳚సు నః ||<span class='MantraNumbering'>{12/32}{9.67.12}{9.3.7.12}{7.2.15.2}{790, 8280}</span></td>
+<td class='VargaStyle1'>అ॒యం త॑ ఆఘృణే సు॒తో ఘృ॒తం న ప॑వతే॒ శుచి॑ |<span class='RishiDevChandas'>{అత్రిః | పవమానః సోమః పూషా వా | గాయత్రీ}</span><p>ఆ భ॑క్షత్‌ క॒న్యా᳚సు నః ||<span class='MantraNumbering'>{12/32}{9.67.12}{9.3.7.12}{7.2.15.2}{790, 8280}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>వా॒చో జం॒తుః క॑వీ॒నాం పవ॑స్వ సోమ॒ ధార॑యా |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>దే॒వేషు॑ రత్న॒ధా, అ॑సి ||<span class='MantraNumbering'>{13/32}{9.67.13}{9.3.7.13}{7.2.15.3}{790, 8281}</span></td>
+<td class='VargaStyle1'>వా॒చో జం॒తుః క॑వీ॒నాం పవ॑స్వ సోమ॒ ధార॑యా |<span class='RishiDevChandas'>{విశ్వామిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>దే॒వేషు॑ రత్న॒ధా, అ॑సి ||<span class='MantraNumbering'>{13/32}{9.67.13}{9.3.7.13}{7.2.15.3}{790, 8281}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ఆ క॒లశే᳚షు ధావతి శ్యే॒నో వర్మ॒ వి గా᳚హతే |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>అ॒భి ద్రోణా॒ కని॑క్రదత్ ||<span class='MantraNumbering'>{14/32}{9.67.14}{9.3.7.14}{7.2.15.4}{790, 8282}</span></td>
+<td class='VargaStyle1'>ఆ క॒లశే᳚షు ధావతి శ్యే॒నో వర్మ॒ వి గా᳚హతే |<span class='RishiDevChandas'>{విశ్వామిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>అ॒భి ద్రోణా॒ కని॑క్రదత్ ||<span class='MantraNumbering'>{14/32}{9.67.14}{9.3.7.14}{7.2.15.4}{790, 8282}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>పరి॒ ప్ర సో᳚మ తే॒ రసోఽస॑ర్జి క॒లశే᳚ సు॒తః |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>శ్యే॒నో న త॒క్తో, అ॑ర్షతి ||<span class='MantraNumbering'>{15/32}{9.67.15}{9.3.7.15}{7.2.15.5}{790, 8283}</span></td>
+<td class='VargaStyle1'>పరి॒ ప్ర సో᳚మ తే॒ రసోఽస॑ర్జి క॒లశే᳚ సు॒తః |<span class='RishiDevChandas'>{విశ్వామిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>శ్యే॒నో న త॒క్తో, అ॑ర్షతి ||<span class='MantraNumbering'>{15/32}{9.67.15}{9.3.7.15}{7.2.15.5}{790, 8283}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>పవ॑స్వ సోమ మం॒దయ॒న్నింద్రా᳚య॒ మధు॑మత్తమః ||<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span><span class='MantraNumbering'>{16/32}{9.67.16}{9.3.7.16}{7.2.16.1}{790, 8284}</span></td>
+<td class='VargaStyle2'>పవ॑స్వ సోమ మం॒దయ॒న్నింద్రా᳚య॒ మధు॑మత్తమః ||<span class='RishiDevChandas'>{జమదగ్నిః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span><span class='MantraNumbering'>{16/32}{9.67.16}{9.3.7.16}{7.2.16.1}{790, 8284}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>అసృ॑గ్రన్‌ దే॒వవీ᳚తయే వాజ॒యంతో॒ రథా᳚, ఇవ ||<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span><span class='MantraNumbering'>{17/32}{9.67.17}{9.3.7.17}{7.2.16.2}{790, 8285}</span></td>
+<td class='VargaStyle2'>అసృ॑గ్రన్‌ దే॒వవీ᳚తయే వాజ॒యంతో॒ రథా᳚, ఇవ ||<span class='RishiDevChandas'>{జమదగ్నిః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span><span class='MantraNumbering'>{17/32}{9.67.17}{9.3.7.17}{7.2.16.2}{790, 8285}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>తే సు॒తాసో᳚ మ॒దింత॑మాః శు॒క్రా వా॒యుమ॑సృక్షత ||<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span><span class='MantraNumbering'>{18/32}{9.67.18}{9.3.7.18}{7.2.16.3}{790, 8286}</span></td>
+<td class='VargaStyle2'>తే సు॒తాసో᳚ మ॒దింత॑మాః శు॒క్రా వా॒యుమ॑సృక్షత ||<span class='RishiDevChandas'>{జమదగ్నిః | పవమానః సోమః | ద్విపదా గాయత్రీ}</span><span class='MantraNumbering'>{18/32}{9.67.18}{9.3.7.18}{7.2.16.3}{790, 8286}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>గ్రావ్ణా᳚ తు॒న్నో, అ॒భిష్టు॑తః ప॒విత్రం᳚ సోమ గచ్ఛసి |<span class='RishiDevChandas'>{ఆంగిరసః పవిత్రః | పవమానః సోమః | గాయత్రీ}</span><p>దధ॑త్‌ స్తో॒త్రే సు॒వీర్యం᳚ ||<span class='MantraNumbering'>{19/32}{9.67.19}{9.3.7.19}{7.2.16.4}{790, 8287}</span></td>
