--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format1/RVS-Kannada-F1-M05.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ಶ್ರೀ॒ ಗು॒ರು॒ಭ್ಯೋ॒ ನ॒ಮಃ॒ ಹರಿಃ ಓಂ ||</h1>
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 05) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 19-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{ಮಂಡಲ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಮಂಡಲ,ಅನುವಾಕ,ಸೂಕ್ತ,ಮಂತ್ರ}{ಅಷ್ಟಕ,ಅಧ್ಯಾಯ,ವರ್ಗ,ಮಂತ್ರ}{ಋಕ್ಸಂಹಿತ ಸೂಕ್ತ ಸಂಖ್ಯಾ,ಋಕ್ಸಂಹಿತ ಮಂತ್ರ ಸಂಖ್ಯಾ}<br> [Last updated on: 29-Nov-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -1362,7 +1362,7 @@
 <td class='VargaStyle1'>ಚ॒ತ್ವಾರ॑ ಈಂ ಬಿಭ್ರತಿ ಕ್ಷೇಮ॒ಯಂತೋ॒ ದಶ॒ ಗರ್ಭಂ᳚ ಚ॒ರಸೇ᳚ ಧಾಪಯಂತೇ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿರಥಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ತ್ರಿ॒ಧಾತ॑ವಃ ಪರ॒ಮಾ, ಅ॑ಸ್ಯ॒ ಗಾವೋ᳚ ದಿ॒ವಶ್ಚ॑ರಂತಿ॒ ಪರಿ॑ ಸ॒ದ್ಯೋ, ಅಂತಾ॑ನ್ ||<span class='MantraNumbering'>{4/7}{5.47.4}{5.4.3.4}{4.3.1.4}{401, 4044}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇ॒ದಂ ವಪು᳚ರ್‍ನಿ॒ವಚ॑ನಂ ಜನಾಸ॒ಶ್ಚರಂ᳚ತಿ॒ ಯನ್ನ॒ದ್ಯ॑ಸ್ತ॒ಸ್ಥುರಾಪಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿರಥಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದ್ವೇ ಯದೀಂ᳚ ಬಿಭೃ॒ತೋ ಮಾ॒ತುರ॒ನ್ಯೇ, ಇ॒ಹೇಹ॑ ಜಾ॒ತೇ ಯ॒ಮ್ಯಾ॒೩॑(ಆ॒) ಸಬಂ᳚ಧೂ ||<span class='MantraNumbering'>{5/7}{5.47.5}{5.4.3.5}{4.3.1.5}{401, 4045}</span></td>
+<td class='VargaStyle1'>ಇ॒ದಂ ವಪು᳚ರ್‌ನಿ॒ವಚ॑ನಂ ಜನಾಸ॒ಶ್ಚರಂ᳚ತಿ॒ ಯನ್ನ॒ದ್ಯ॑ಸ್‌ತ॒ಸ್ಥುರಾಪಃ॑ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿರಥಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ದ್ವೇ ಯದೀಂ᳚ ಬಿಭೃ॒ತೋ ಮಾ॒ತುರ॒ನ್ಯೇ, ಇ॒ಹೇಹ॑ ಜಾ॒ತೇ ಯ॒ಮ್ಯಾ॒೩॑(ಆ॒) ಸಬಂ᳚ಧೂ ||<span class='MantraNumbering'>{5/7}{5.47.5}{5.4.3.5}{4.3.1.5}{401, 4045}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ವಿ ತ᳚ನ್ವತೇ॒ ಧಿಯೋ᳚, ಅಸ್ಮಾ॒, ಅಪಾಂ᳚ಸಿ॒ ವಸ್ತ್ರಾ᳚ ಪು॒ತ್ರಾಯ॑ ಮಾ॒ತರೋ᳚ ವಯಂತಿ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿರಥಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉ॒ಪ॒ಪ್ರ॒ಕ್ಷೇ ವೃಷ॑ಣೋ॒ ಮೋದ॑ಮಾನಾ ದಿ॒ವಸ್ಪ॒ಥಾ ವ॒ಧ್ವೋ᳚ ಯಂ॒ತ್ಯಚ್ಛ॑ ||<span class='MantraNumbering'>{6/7}{5.47.6}{5.4.3.6}{4.3.1.6}{401, 4046}</span></td>
@@ -1401,7 +1401,7 @@
 <td class='VargaStyle1'>ಅ॒ದ॒ತ್ರ॒ಯಾ ದ॑ಯತೇ॒ ವಾರ್‍ಯಾ᳚ಣಿ ಪೂ॒ಷಾ ಭಗೋ॒, ಅದಿ॑ತಿ॒ರ್‍ವಸ್ತ॑ ಉ॒ಸ್ರಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿಪ್ರಭುಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಇಂದ್ರೋ॒ ವಿಷ್ಣು॒ರ್‍ವರು॑ಣೋ ಮಿ॒ತ್ರೋ, ಅ॒ಗ್ನಿರಹಾ᳚ನಿ ಭ॒ದ್ರಾ ಜ॑ನಯಂತ ದ॒ಸ್ಮಾಃ ||<span class='MantraNumbering'>{3/5}{5.49.3}{5.4.5.3}{4.3.3.3}{403, 4055}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತನ್ನೋ᳚, ಅನ॒ರ್‍ವಾ ಸ॑ವಿ॒ತಾ ವರೂ᳚ಥಂ॒ ತತ್‌ ಸಿಂಧ॑ವ ಇ॒ಷಯಂ᳚ತೋ॒, ಅನು॑ ಗ್ಮನ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿಪ್ರಭುಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉಪ॒ ಯದ್ವೋಚೇ᳚, ಅಧ್ವ॒ರಸ್ಯ॒ ಹೋತಾ᳚ ರಾ॒ಯಃ ಸ್ಯಾ᳚ಮ॒ ಪತ॑ಯೋ॒ ವಾಜ॑ರತ್ನಾಃ ||<span class='MantraNumbering'>{4/5}{5.49.4}{5.4.5.4}{4.3.3.4}{403, 4056}</span></td>
+<td class='VargaStyle1'>ತನ್ನೋ᳚, ಅನ॒ರ್‍ವಾ ಸ॑ವಿ॒ತಾ ವರೂ᳚ಥಂ॒ ತತ್‌ ಸಿಂಧ॑ವ ಇ॒ಷಯಂ᳚ತೋ॒, ಅನು॑ ಗ್ಮನ್ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿಪ್ರಭುಃ | ವಿಶ್ವದೇವಾಃ | ತ್ರಿಷ್ಟುಪ್}</span><p>ಉಪ॒ ಯದ್‌ ವೋಚೇ᳚, ಅಧ್ವ॒ರಸ್ಯ॒ ಹೋತಾ᳚ ರಾ॒ಯಃ ಸ್ಯಾ᳚ಮ॒ ಪತ॑ಯೋ॒ ವಾಜ॑ರತ್ನಾಃ ||<span class='MantraNumbering'>{4/5}{5.49.4}{5.4.5.4}{4.3.3.4}{403, 4056}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಪ್ರ ಯೇ ವಸು॑ಭ್ಯ॒ ಈವ॒ದಾ ನಮೋ॒ ದುರ್‍ಯೇ ಮಿ॒ತ್ರೇ ವರು॑ಣೇ ಸೂ॒ಕ್ತವಾ᳚ಚಃ |<span class='RishiDevChandas'>{ಆತ್ರೇಯಃ ಪ್ರತಿಪ್ರಭುಃ | ವಿಶ್ವದೇವಾಃ | ತೃಣಪಾಣಿಃ}</span><p>ಅವೈ॒ತ್ವಭ್ವಂ᳚ ಕೃಣು॒ತಾ ವರೀ᳚ಯೋ ದಿ॒ವಸ್ಪೃ॑ಥಿ॒ವ್ಯೋರವ॑ಸಾ ಮದೇಮ ||<span class='MantraNumbering'>{5/5}{5.49.5}{5.4.5.5}{4.3.3.5}{403, 4057}</span></td>
@@ -1434,7 +1434,7 @@
 <td class='VargaStyle1'>ಋತ॑ಧೀತಯ॒ ಆ ಗ॑ತ॒ ಸತ್ಯ॑ಧರ್ಮಾಣೋ, ಅಧ್ವ॒ರಂ |<span class='RishiDevChandas'>{ಸ್ವಸ್ತ್ಯಾತ್ರೇಯಃ | ವಿಶ್ವದೇವಾಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಗ್ನೇಃ ಪಿ॑ಬತ ಜಿ॒ಹ್ವಯಾ᳚ ||<span class='MantraNumbering'>{2/15}{5.51.2}{5.4.7.2}{4.3.5.2}{405, 4064}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಿಪ್ರೇ᳚ಭಿರ್‍ವಿಪ್ರ ಸಂತ್ಯ ಪ್ರಾತ॒ರ್‍ಯಾವ॑ಭಿ॒ರಾ ಗ॑ಹಿ |<span class='RishiDevChandas'>{ಸ್ವಸ್ತ್ಯಾತ್ರೇಯಃ | ವಿಶ್ವದೇವಾಃ | ಗಾಯತ್ರೀ}</span><p>ದೇ॒ವೇಭಿಃ॒ ಸೋಮ॑ಪೀತಯೇ ||<span class='MantraNumbering'>{3/15}{5.51.3}{5.4.7.3}{4.3.5.3}{405, 4065}</span></td>
+<td class='VargaStyle1'>ವಿಪ್ರೇ᳚ಭಿರ್‌ವಿಪ್ರ ಸಂತ್ಯ ಪ್ರಾತ॒ರ್‍ಯಾವ॑ಭಿ॒ರಾ ಗ॑ಹಿ |<span class='RishiDevChandas'>{ಸ್ವಸ್ತ್ಯಾತ್ರೇಯಃ | ವಿಶ್ವದೇವಾಃ | ಗಾಯತ್ರೀ}</span><p>ದೇ॒ವೇಭಿಃ॒ ಸೋಮ॑ಪೀತಯೇ ||<span class='MantraNumbering'>{3/15}{5.51.3}{5.4.7.3}{4.3.5.3}{405, 4065}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle1'>ಅ॒ಯಂ ಸೋಮ॑ಶ್ಚ॒ಮೂ ಸು॒ತೋ ಽಮ॑ತ್ರೇ॒ ಪರಿ॑ ಷಿಚ್ಯತೇ |<span class='RishiDevChandas'>{ಸ್ವಸ್ತ್ಯಾತ್ರೇಯಃ | ಇಂದ್ರವಾಯೂ | ಗಾಯತ್ರೀ}</span><p>ಪ್ರಿ॒ಯ ಇಂದ್ರಾ᳚ಯ ವಾ॒ಯವೇ᳚ ||<span class='MantraNumbering'>{4/15}{5.51.4}{5.4.7.4}{4.3.5.4}{405, 4066}</span></td>
