--- a/Rigveda/SamhitaPatha/Kannada/Mandala/Format4/RVS-Kannada-F4-M09.html
+++ b/Rigveda/SamhitaPatha/Kannada/Mandala/Format4/RVS-Kannada-F4-M09.html
@@ -9,7 +9,7 @@
 <h2 class='simpHtmlH1'>|| ಋಗ್ವೇದ ಸಂಹಿತಾ (ಮಂಡಲ: 09) ||</h2>
 <hr>
 <h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com
-<br> [Last updated on: 14-Nov-2024]</h6>
+<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -2019,55 +2019,55 @@
 <td class='VargaStyle1'>ತ್ವಂಸೋ᳚ಮಾಸಿಧಾರ॒ಯುರ್ಮಂ॒ದ್ರಓಜಿ॑ಷ್ಠೋ,ಅಧ್ವ॒ರೇ |<span class='RishiDevChandas'>{ಭರದ್ವಾಜಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಪವ॑ಸ್ವಮಂಹ॒ಯದ್ರ॑ಯಿಃ॒(ಸ್ವಾಹಾ᳚) || 1 || <span class='MantraNumbering'>ವರ್ಗ:13</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತ್ವಂಸು॒ತೋನೃ॒ಮಾದ॑ನೋದಧ॒ನ್ವಾನ್‌ಮ॑ತ್ಸ॒ರಿಂತ॑ಮಃ |<span class='RishiDevChandas'>{ಕಶ್ಯಪಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಾ᳚ಯಸೂ॒ರಿರಂಧ॑ಸಾ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
+<td class='VargaStyle1'>ತ್ವಂಸು॒ತೋನೃ॒ಮಾದ॑ನೋದಧ॒ನ್ವಾನ್‌ಮ॑ತ್ಸ॒ರಿಂತ॑ಮಃ |<span class='RishiDevChandas'>{ಭರದ್ವಾಜಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಾ᳚ಯಸೂ॒ರಿರಂಧ॑ಸಾ॒(ಸ್ವಾಹಾ᳚) || 2 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ತ್ವಂಸು॑ಷ್ವಾ॒ಣೋ,ಅದ್ರಿ॑ಭಿರ॒ಭ್ಯ॑ರ್ಷ॒ಕನಿ॑ಕ್ರದತ್ |<span class='RishiDevChandas'>{ಗೋತಮಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದ್ಯು॒ಮಂತಂ॒ಶುಷ್ಮ॑ಮುತ್ತ॒ಮಂ(ಸ್ವಾಹಾ᳚) || 3 || </td>
+<td class='VargaStyle1'>ತ್ವಂಸು॑ಷ್ವಾ॒ಣೋ,ಅದ್ರಿ॑ಭಿರ॒ಭ್ಯ॑ರ್ಷ॒ಕನಿ॑ಕ್ರದತ್ |<span class='RishiDevChandas'>{ಭರದ್ವಾಜಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದ್ಯು॒ಮಂತಂ॒ಶುಷ್ಮ॑ಮುತ್ತ॒ಮಂ(ಸ್ವಾಹಾ᳚) || 3 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇಂದು᳚ರ್ಹಿನ್ವಾ॒ನೋ,ಅ॑ರ್ಷತಿತಿ॒ರೋವಾರಾ᳚ಣ್ಯ॒ವ್ಯಯಾ᳚ |<span class='RishiDevChandas'>{ಅತ್ರಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಹರಿ॒ರ್‍ವಾಜ॑ಮಚಿಕ್ರದ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 4 || </td>
+<td class='VargaStyle1'>ಇಂದು᳚ರ್ಹಿನ್ವಾ॒ನೋ,ಅ॑ರ್ಷತಿತಿ॒ರೋವಾರಾ᳚ಣ್ಯ॒ವ್ಯಯಾ᳚ |<span class='RishiDevChandas'>{ಕಶ್ಯಪಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಹರಿ॒ರ್‍ವಾಜ॑ಮಚಿಕ್ರದ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 4 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಇಂದೋ॒ವ್ಯವ್ಯ॑ಮರ್ಷಸಿ॒ವಿಶ್ರವಾಂ᳚ಸಿ॒ವಿಸೌಭ॑ಗಾ |<span class='RishiDevChandas'>{ವಿಶ್ವಾಮಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ವಿವಾಜಾ᳚ನ್‌ತ್ಸೋಮ॒ಗೋಮ॑ತಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
+<td class='VargaStyle1'>ಇಂದೋ॒ವ್ಯವ್ಯ॑ಮರ್ಷಸಿ॒ವಿಶ್ರವಾಂ᳚ಸಿ॒ವಿಸೌಭ॑ಗಾ |<span class='RishiDevChandas'>{ಕಶ್ಯಪಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ವಿವಾಜಾ᳚ನ್‌ತ್ಸೋಮ॒ಗೋಮ॑ತಃ॒(ಸ್ವಾಹಾ᳚) || 5 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಆನ॑ಇಂದೋಶತ॒ಗ್ವಿನಂ᳚ರ॒ಯಿಂಗೋಮಂ᳚ತಮ॒ಶ್ವಿನಂ᳚ |<span class='RishiDevChandas'>{ಜಮದಗ್ನಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಭರಾ᳚ಸೋಮಸಹ॒ಸ್ರಿಣ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:14</span></td>
+<td class='VargaStyle2'>ಆನ॑ಇಂದೋಶತ॒ಗ್ವಿನಂ᳚ರ॒ಯಿಂಗೋಮಂ᳚ತಮ॒ಶ್ವಿನಂ᳚ |<span class='RishiDevChandas'>{ಕಶ್ಯಪಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಭರಾ᳚ಸೋಮಸಹ॒ಸ್ರಿಣ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 6 || <span class='MantraNumbering'>ವರ್ಗ:14</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಪವ॑ಮಾನಾಸ॒ಇಂದ॑ವಸ್ತಿ॒ರಃಪ॒ವಿತ್ರ॑ಮಾ॒ಶವಃ॑ |<span class='RishiDevChandas'>{ವಸಿಷ್ಠಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಂ॒ಯಾಮೇ᳚ಭಿರಾಶತ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
+<td class='VargaStyle2'>ಪವ॑ಮಾನಾಸ॒ಇಂದ॑ವಸ್ತಿ॒ರಃಪ॒ವಿತ್ರ॑ಮಾ॒ಶವಃ॑ |<span class='RishiDevChandas'>{ಗೋತಮಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಇಂದ್ರಂ॒ಯಾಮೇ᳚ಭಿರಾಶತ॒(ಸ್ವಾಹಾ᳚) || 7 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಕ॒ಕು॒ಹಃಸೋ॒ಮ್ಯೋರಸ॒ಇಂದು॒ರಿಂದ್ರಾ᳚ಯಪೂ॒ರ್‍ವ್ಯಃ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಆ॒ಯುಃಪ॑ವತಆ॒ಯವೇ॒(ಸ್ವಾಹಾ᳚) || 8 || </td>
+<td class='VargaStyle2'>ಕ॒ಕು॒ಹಃಸೋ॒ಮ್ಯೋರಸ॒ಇಂದು॒ರಿಂದ್ರಾ᳚ಯಪೂ॒ರ್‍ವ್ಯಃ |<span class='RishiDevChandas'>{ಗೋತಮಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಆ॒ಯುಃಪ॑ವತಆ॒ಯವೇ॒(ಸ್ವಾಹಾ᳚) || 8 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಹಿ॒ನ್ವಂತಿ॒ಸೂರ॒ಮುಸ್ರ॑ಯಃ॒ಪವ॑ಮಾನಂಮಧು॒ಶ್ಚುತಂ᳚ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಭಿಗಿ॒ರಾಸಮ॑ಸ್ವರ॒‌ನ್(ಸ್ವಾಹಾ᳚) || 9 || </td>
+<td class='VargaStyle2'>ಹಿ॒ನ್ವಂತಿ॒ಸೂರ॒ಮುಸ್ರ॑ಯಃ॒ಪವ॑ಮಾನಂಮಧು॒ಶ್ಚುತಂ᳚ |<span class='RishiDevChandas'>{ಗೋತಮಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಭಿಗಿ॒ರಾಸಮ॑ಸ್ವರ॒‌ನ್(ಸ್ವಾಹಾ᳚) || 9 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಅ॒ವಿ॒ತಾನೋ᳚,ಅ॒ಜಾಶ್ವಃ॑ಪೂ॒ಷಾಯಾಮ॑ನಿಯಾಮನಿ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆಭ॑ಕ್ಷತ್‌ಕ॒ನ್ಯಾ᳚ಸುನಃ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
+<td class='VargaStyle2'>ಅ॒ವಿ॒ತಾನೋ᳚,ಅ॒ಜಾಶ್ವಃ॑ಪೂ॒ಷಾಯಾಮ॑ನಿಯಾಮನಿ |<span class='RishiDevChandas'>{ಅತ್ರಿಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆಭ॑ಕ್ಷತ್‌ಕ॒ನ್ಯಾ᳚ಸುನಃ॒(ಸ್ವಾಹಾ᳚) || 10 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅ॒ಯಂಸೋಮಃ॑ಕಪ॒ರ್ದಿನೇ᳚ಘೃ॒ತಂನಪ॑ವತೇ॒ಮಧು॑ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆಭ॑ಕ್ಷತ್‌ಕ॒ನ್ಯಾ᳚ಸುನಃ॒(ಸ್ವಾಹಾ᳚) || 11 || <span class='MantraNumbering'>ವರ್ಗ:15</span></td>
+<td class='VargaStyle1'>ಅ॒ಯಂಸೋಮಃ॑ಕಪ॒ರ್ದಿನೇ᳚ಘೃ॒ತಂನಪ॑ವತೇ॒ಮಧು॑ |<span class='RishiDevChandas'>{ಅತ್ರಿಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆಭ॑ಕ್ಷತ್‌ಕ॒ನ್ಯಾ᳚ಸುನಃ॒(ಸ್ವಾಹಾ᳚) || 11 || <span class='MantraNumbering'>ವರ್ಗ:15</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಅ॒ಯಂತ॑ಆಘೃಣೇಸು॒ತೋಘೃ॒ತಂನಪ॑ವತೇ॒ಶುಚಿ॑ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆಭ॑ಕ್ಷತ್‌ಕ॒ನ್ಯಾ᳚ಸುನಃ॒(ಸ್ವಾಹಾ᳚) || 12 || </td>
+<td class='VargaStyle1'>ಅ॒ಯಂತ॑ಆಘೃಣೇಸು॒ತೋಘೃ॒ತಂನಪ॑ವತೇ॒ಶುಚಿ॑ |<span class='RishiDevChandas'>{ಅತ್ರಿಃ | ಪವಮಾನಃ ಸೋಮಃ ಪೂಷಾ ವಾ | ಗಾಯತ್ರೀ}</span><p>ಆಭ॑ಕ್ಷತ್‌ಕ॒ನ್ಯಾ᳚ಸುನಃ॒(ಸ್ವಾಹಾ᳚) || 12 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ವಾ॒ಚೋಜಂ॒ತುಃಕ॑ವೀ॒ನಾಂಪವ॑ಸ್ವಸೋಮ॒ಧಾರ॑ಯಾ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದೇ॒ವೇಷು॑ರತ್ನ॒ಧಾ,ಅ॑ಸಿ॒(ಸ್ವಾಹಾ᳚) || 13 || </td>
+<td class='VargaStyle1'>ವಾ॒ಚೋಜಂ॒ತುಃಕ॑ವೀ॒ನಾಂಪವ॑ಸ್ವಸೋಮ॒ಧಾರ॑ಯಾ |<span class='RishiDevChandas'>{ವಿಶ್ವಾಮಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದೇ॒ವೇಷು॑ರತ್ನ॒ಧಾ,ಅ॑ಸಿ॒(ಸ್ವಾಹಾ᳚) || 13 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಆಕ॒ಲಶೇ᳚ಷುಧಾವತಿಶ್ಯೇ॒ನೋವರ್ಮ॒ವಿಗಾ᳚ಹತೇ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಭಿದ್ರೋಣಾ॒ಕನಿ॑ಕ್ರದ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 14 || </td>
+<td class='VargaStyle1'>ಆಕ॒ಲಶೇ᳚ಷುಧಾವತಿಶ್ಯೇ॒ನೋವರ್ಮ॒ವಿಗಾ᳚ಹತೇ |<span class='RishiDevChandas'>{ವಿಶ್ವಾಮಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಅ॒ಭಿದ್ರೋಣಾ॒ಕನಿ॑ಕ್ರದ॒‌ತ್(ಸ್ವಾಹಾ᳚) || 14 || </td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ಪರಿ॒ಪ್ರಸೋ᳚ಮತೇ॒ರಸೋಽಸ॑ರ್ಜಿಕ॒ಲಶೇ᳚ಸು॒ತಃ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಶ್ಯೇ॒ನೋನತ॒ಕ್ತೋ,ಅ॑ರ್ಷತಿ॒(ಸ್ವಾಹಾ᳚) || 15 || </td>
+<td class='VargaStyle1'>ಪರಿ॒ಪ್ರಸೋ᳚ಮತೇ॒ರಸೋಽಸ॑ರ್ಜಿಕ॒ಲಶೇ᳚ಸು॒ತಃ |<span class='RishiDevChandas'>{ವಿಶ್ವಾಮಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ಶ್ಯೇ॒ನೋನತ॒ಕ್ತೋ,ಅ॑ರ್ಷತಿ॒(ಸ್ವಾಹಾ᳚) || 15 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಪವ॑ಸ್ವಸೋಮಮಂ॒ದಯ॒ನ್ನಿಂದ್ರಾ᳚ಯ॒ಮಧು॑ಮತ್ತಮಃ॒(ಸ್ವಾಹಾ᳚) || <span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span>16 || <span class='MantraNumbering'>ವರ್ಗ:16</span></td>
+<td class='VargaStyle2'>ಪವ॑ಸ್ವಸೋಮಮಂ॒ದಯ॒ನ್ನಿಂದ್ರಾ᳚ಯ॒ಮಧು॑ಮತ್ತಮಃ॒(ಸ್ವಾಹಾ᳚) || <span class='RishiDevChandas'>{ಜಮದಗ್ನಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span>16 || <span class='MantraNumbering'>ವರ್ಗ:16</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ಅಸೃ॑ಗ್ರನ್‌ದೇ॒ವವೀ᳚ತಯೇವಾಜ॒ಯಂತೋ॒ರಥಾ᳚,ಇವ॒(ಸ್ವಾಹಾ᳚) || <span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span>17 || </td>
+<td class='VargaStyle2'>ಅಸೃ॑ಗ್ರನ್‌ದೇ॒ವವೀ᳚ತಯೇವಾಜ॒ಯಂತೋ॒ರಥಾ᳚,ಇವ॒(ಸ್ವಾಹಾ᳚) || <span class='RishiDevChandas'>{ಜಮದಗ್ನಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span>17 || </td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ತೇಸು॒ತಾಸೋ᳚ಮ॒ದಿಂತ॑ಮಾಃಶು॒ಕ್ರಾವಾ॒ಯುಮ॑ಸೃಕ್ಷತ॒(ಸ್ವಾಹಾ᳚) || <span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span>18 || </td>
+<td class='VargaStyle2'>ತೇಸು॒ತಾಸೋ᳚ಮ॒ದಿಂತ॑ಮಾಃಶು॒ಕ್ರಾವಾ॒ಯುಮ॑ಸೃಕ್ಷತ॒(ಸ್ವಾಹಾ᳚) || <span class='RishiDevChandas'>{ಜಮದಗ್ನಿಃ | ಪವಮಾನಃ ಸೋಮಃ | ದ್ವಿಪದಾ ಗಾಯತ್ರೀ}</span>18 || </td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ಗ್ರಾವ್ಣಾ᳚ತು॒ನ್ನೋ,ಅ॒ಭಿಷ್ಟು॑ತಃಪ॒ವಿತ್ರಂ᳚ಸೋಮಗಚ್ಛಸಿ |<span class='RishiDevChandas'>{ಆಂಗಿರಸಃ ಪವಿತ್ರಃ | ಪವಮಾನಃ ಸೋಮಃ | ಗಾಯತ್ರೀ}</span><p>ದಧ॑ತ್‌ಸ್ತೋ॒ತ್ರೇಸು॒ವೀರ್‍ಯ॒‌ಮ್(ಸ್ವಾಹಾ᳚) || 19 || </td>
