--- a/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format1/RVS-Malayalam-F1-A07.html
+++ b/Rigveda/SamhitaPatha/Malayalam/Ashtaka/Format1/RVS-Malayalam-F1-A07.html
@@ -7,7 +7,7 @@
 <body>
 <h1 class='simpHtmlH1'>|| ശ്രീ॒ ഗു॒രു॒ഭ്യോ॒ ന॒മഃ॒ ഹരിഃ ഓം ||</h1>
 <h2 class='simpHtmlH1'>|| ഋഗ്വേദ സംഹിതാ (അഷ്ടക: 07) ||</h2>
-<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 14-Nov-2024]</h6>
+<hr><h6 style='font-family: Arial, Helvetica, sans-serif'>For any questions, suggestions or participation in the project, contact Dayananda Aithal at dithal29@gmail.com<br>Mantra classification is following this convention{അഷ്ടക,അധ്യായ,വർഗ,മന്ത്ര}{മണ്ഡല,സൂക്ത,മന്ത്ര}{മണ്ഡല,അനുവാക,സൂക്ത,മന്ത്ര}{ഋക്സംഹിത സൂക്ത സംഖ്യാ,ഋക്സംഹിത മന്ത്ര സംഖ്യാ}<br> [Last updated on: 03-Dec-2024]</h6>
 <hr>
 <table>
 <tbody>
@@ -867,55 +867,55 @@
 <td class='VargaStyle1'>ത്വം സോ᳚മാസി ധാര॒യുർമ॒ന്ദ്ര ഓജി॑ഷ്ഠോ, അധ്വ॒രേ |<span class='RishiDevChandas'>{ഭരദ്വാജഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>പവ॑സ്വ മംഹ॒യദ്ര॑യിഃ ||<span class='MantraNumbering'>{1/32}{7.2.13.1}{9.67.1}{9.3.7.1}{790, 8269}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ത്വം സു॒തോ നൃ॒മാദ॑നോ ദധ॒ന്വാൻ‌ മ॑ത്സ॒രിന്ത॑മഃ |<span class='RishiDevChandas'>{കശ്യപഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഇന്ദ്രാ᳚യ സൂ॒രിരന്ധ॑സാ ||<span class='MantraNumbering'>{2/32}{7.2.13.2}{9.67.2}{9.3.7.2}{790, 8270}</span></td>
+<td class='VargaStyle1'>ത്വം സു॒തോ നൃ॒മാദ॑നോ ദധ॒ന്വാൻ‌ മ॑ത്സ॒രിന്ത॑മഃ |<span class='RishiDevChandas'>{ഭരദ്വാജഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഇന്ദ്രാ᳚യ സൂ॒രിരന്ധ॑സാ ||<span class='MantraNumbering'>{2/32}{7.2.13.2}{9.67.2}{9.3.7.2}{790, 8270}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ത്വം സു॑ഷ്വാ॒ണോ, അദ്രി॑ഭിര॒ഭ്യ॑ർഷ॒ കനി॑ക്രദത് |<span class='RishiDevChandas'>{ഗോതമഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദ്യു॒മന്തം॒ ശുഷ്മ॑മുത്ത॒മം ||<span class='MantraNumbering'>{3/32}{7.2.13.3}{9.67.3}{9.3.7.3}{790, 8271}</span></td>
+<td class='VargaStyle1'>ത്വം സു॑ഷ്വാ॒ണോ, അദ്രി॑ഭിര॒ഭ്യ॑ർഷ॒ കനി॑ക്രദത് |<span class='RishiDevChandas'>{ഭരദ്വാജഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദ്യു॒മന്തം॒ ശുഷ്മ॑മുത്ത॒മം ||<span class='MantraNumbering'>{3/32}{7.2.13.3}{9.67.3}{9.3.7.3}{790, 8271}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഇന്ദു᳚ർഹിന്വാ॒നോ, അ॑ർഷതി തി॒രോ വാരാ᳚ണ്യ॒വ്യയാ᳚ |<span class='RishiDevChandas'>{അത്രിഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഹരി॒ർവാജ॑മചിക്രദത് ||<span class='MantraNumbering'>{4/32}{7.2.13.4}{9.67.4}{9.3.7.4}{790, 8272}</span></td>
+<td class='VargaStyle1'>ഇന്ദു᳚ർഹിന്വാ॒നോ, അ॑ർഷതി തി॒രോ വാരാ᳚ണ്യ॒വ്യയാ᳚ |<span class='RishiDevChandas'>{കശ്യപഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഹരി॒ർവാജ॑മചിക്രദത് ||<span class='MantraNumbering'>{4/32}{7.2.13.4}{9.67.4}{9.3.7.4}{790, 8272}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ഇന്ദോ॒ വ്യവ്യ॑മർഷസി॒ വി ശ്രവാം᳚സി॒ വി സൗഭ॑ഗാ |<span class='RishiDevChandas'>{വിശ്വാമിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>വി വാജാ᳚ൻ‌ ത്സോമ॒ ഗോമ॑തഃ ||<span class='MantraNumbering'>{5/32}{7.2.13.5}{9.67.5}{9.3.7.5}{790, 8273}</span></td>
+<td class='VargaStyle1'>ഇന്ദോ॒ വ്യവ്യ॑മർഷസി॒ വി ശ്രവാം᳚സി॒ വി സൗഭ॑ഗാ |<span class='RishiDevChandas'>{കശ്യപഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>വി വാജാ᳚ൻ‌ ത്സോമ॒ ഗോമ॑തഃ ||<span class='MantraNumbering'>{5/32}{7.2.13.5}{9.67.5}{9.3.7.5}{790, 8273}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ആ ന॑ ഇന്ദോ ശത॒ഗ്വിനം᳚ ര॒യിം ഗോമ᳚ന്തമ॒ശ്വിനം᳚ |<span class='RishiDevChandas'>{ജമദഗ്നിഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഭരാ᳚ സോമ സഹ॒സ്രിണം᳚ ||<span class='MantraNumbering'>{6/32}{7.2.14.1}{9.67.6}{9.3.7.6}{790, 8274}</span></td>
+<td class='VargaStyle2'>ആ ന॑ ഇന്ദോ ശത॒ഗ്വിനം᳚ ര॒യിം ഗോമ᳚ന്തമ॒ശ്വിനം᳚ |<span class='RishiDevChandas'>{കശ്യപഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഭരാ᳚ സോമ സഹ॒സ്രിണം᳚ ||<span class='MantraNumbering'>{6/32}{7.2.14.1}{9.67.6}{9.3.7.6}{790, 8274}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>പവ॑മാനാസ॒ ഇന്ദ॑വസ്തി॒രഃ പ॒വിത്ര॑മാ॒ശവഃ॑ |<span class='RishiDevChandas'>{വസിഷ്ഠഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഇന്ദ്രം॒ യാമേ᳚ഭിരാശത ||<span class='MantraNumbering'>{7/32}{7.2.14.2}{9.67.7}{9.3.7.7}{790, 8275}</span></td>
+<td class='VargaStyle2'>പവ॑മാനാസ॒ ഇന്ദ॑വസ്തി॒രഃ പ॒വിത്ര॑മാ॒ശവഃ॑ |<span class='RishiDevChandas'>{ഗോതമഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ഇന്ദ്രം॒ യാമേ᳚ഭിരാശത ||<span class='MantraNumbering'>{7/32}{7.2.14.2}{9.67.7}{9.3.7.7}{790, 8275}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ക॒കു॒ഹഃ സോ॒മ്യോ രസ॒ ഇന്ദു॒രിന്ദ്രാ᳚യ പൂ॒ർവ്യഃ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ആ॒യുഃ പ॑വത ആ॒യവേ᳚ ||<span class='MantraNumbering'>{8/32}{7.2.14.3}{9.67.8}{9.3.7.8}{790, 8276}</span></td>
+<td class='VargaStyle2'>ക॒കു॒ഹഃ സോ॒മ്യോ രസ॒ ഇന്ദു॒രിന്ദ്രാ᳚യ പൂ॒ർവ്യഃ |<span class='RishiDevChandas'>{ഗോതമഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ആ॒യുഃ പ॑വത ആ॒യവേ᳚ ||<span class='MantraNumbering'>{8/32}{7.2.14.3}{9.67.8}{9.3.7.8}{790, 8276}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>ഹി॒ന്വന്തി॒ സൂര॒മുസ്ര॑യഃ॒ പവ॑മാനം മധു॒ശ്ചുതം᳚ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>അ॒ഭി ഗി॒രാ സമ॑സ്വരൻ ||<span class='MantraNumbering'>{9/32}{7.2.14.4}{9.67.9}{9.3.7.9}{790, 8277}</span></td>
+<td class='VargaStyle2'>ഹി॒ന്വന്തി॒ സൂര॒മുസ്ര॑യഃ॒ പവ॑മാനം മധു॒ശ്ചുതം᳚ |<span class='RishiDevChandas'>{ഗോതമഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>അ॒ഭി ഗി॒രാ സമ॑സ്വരൻ ||<span class='MantraNumbering'>{9/32}{7.2.14.4}{9.67.9}{9.3.7.9}{790, 8277}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>അ॒വി॒താ നോ᳚, അ॒ജാശ്വഃ॑ പൂ॒ഷാ യാമ॑നിയാമനി |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആ ഭ॑ക്ഷത്‌ ക॒ന്യാ᳚സു നഃ ||<span class='MantraNumbering'>{10/32}{7.2.14.5}{9.67.10}{9.3.7.10}{790, 8278}</span></td>
+<td class='VargaStyle2'>അ॒വി॒താ നോ᳚, അ॒ജാശ്വഃ॑ പൂ॒ഷാ യാമ॑നിയാമനി |<span class='RishiDevChandas'>{അത്രിഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആ ഭ॑ക്ഷത്‌ ക॒ന്യാ᳚സു നഃ ||<span class='MantraNumbering'>{10/32}{7.2.14.5}{9.67.10}{9.3.7.10}{790, 8278}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അ॒യം സോമഃ॑ കപ॒ർദിനേ᳚ ഘൃ॒തം ന പ॑വതേ॒ മധു॑ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആ ഭ॑ക്ഷത്‌ ക॒ന്യാ᳚സു നഃ ||<span class='MantraNumbering'>{11/32}{7.2.15.1}{9.67.11}{9.3.7.11}{790, 8279}</span></td>
+<td class='VargaStyle1'>അ॒യം സോമഃ॑ കപ॒ർദിനേ᳚ ഘൃ॒തം ന പ॑വതേ॒ മധു॑ |<span class='RishiDevChandas'>{അത്രിഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആ ഭ॑ക്ഷത്‌ ക॒ന്യാ᳚സു നഃ ||<span class='MantraNumbering'>{11/32}{7.2.15.1}{9.67.11}{9.3.7.11}{790, 8279}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>അ॒യം ത॑ ആഘൃണേ സു॒തോ ഘൃ॒തം ന പ॑വതേ॒ ശുചി॑ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആ ഭ॑ക്ഷത്‌ ക॒ന്യാ᳚സു നഃ ||<span class='MantraNumbering'>{12/32}{7.2.15.2}{9.67.12}{9.3.7.12}{790, 8280}</span></td>
+<td class='VargaStyle1'>അ॒യം ത॑ ആഘൃണേ സു॒തോ ഘൃ॒തം ന പ॑വതേ॒ ശുചി॑ |<span class='RishiDevChandas'>{അത്രിഃ | പവമാനഃ സോമഃ പൂഷാ വാ | ഗായത്രീ}</span><p>ആ ഭ॑ക്ഷത്‌ ക॒ന്യാ᳚സു നഃ ||<span class='MantraNumbering'>{12/32}{7.2.15.2}{9.67.12}{9.3.7.12}{790, 8280}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>വാ॒ചോ ജ॒ന്തുഃ ക॑വീ॒നാം പവ॑സ്വ സോമ॒ ധാര॑യാ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദേ॒വേഷു॑ രത്ന॒ധാ, അ॑സി ||<span class='MantraNumbering'>{13/32}{7.2.15.3}{9.67.13}{9.3.7.13}{790, 8281}</span></td>
+<td class='VargaStyle1'>വാ॒ചോ ജ॒ന്തുഃ ക॑വീ॒നാം പവ॑സ്വ സോമ॒ ധാര॑യാ |<span class='RishiDevChandas'>{വിശ്വാമിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദേ॒വേഷു॑ രത്ന॒ധാ, അ॑സി ||<span class='MantraNumbering'>{13/32}{7.2.15.3}{9.67.13}{9.3.7.13}{790, 8281}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>ആ ക॒ലശേ᳚ഷു ധാവതി ശ്യേ॒നോ വർമ॒ വി ഗാ᳚ഹതേ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>അ॒ഭി ദ്രോണാ॒ കനി॑ക്രദത് ||<span class='MantraNumbering'>{14/32}{7.2.15.4}{9.67.14}{9.3.7.14}{790, 8282}</span></td>
+<td class='VargaStyle1'>ആ ക॒ലശേ᳚ഷു ധാവതി ശ്യേ॒നോ വർമ॒ വി ഗാ᳚ഹതേ |<span class='RishiDevChandas'>{വിശ്വാമിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>അ॒ഭി ദ്രോണാ॒ കനി॑ക്രദത് ||<span class='MantraNumbering'>{14/32}{7.2.15.4}{9.67.14}{9.3.7.14}{790, 8282}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle1'>പരി॒ പ്ര സോ᳚മ തേ॒ രസോഽസ॑ർജി ക॒ലശേ᳚ സു॒തഃ |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ശ്യേ॒നോ ന ത॒ക്തോ, അ॑ർഷതി ||<span class='MantraNumbering'>{15/32}{7.2.15.5}{9.67.15}{9.3.7.15}{790, 8283}</span></td>
+<td class='VargaStyle1'>പരി॒ പ്ര സോ᳚മ തേ॒ രസോഽസ॑ർജി ക॒ലശേ᳚ സു॒തഃ |<span class='RishiDevChandas'>{വിശ്വാമിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ശ്യേ॒നോ ന ത॒ക്തോ, അ॑ർഷതി ||<span class='MantraNumbering'>{15/32}{7.2.15.5}{9.67.15}{9.3.7.15}{790, 8283}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>പവ॑സ്വ സോമ മ॒ന്ദയ॒ന്നിന്ദ്രാ᳚യ॒ മധു॑മത്തമഃ ||<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span><span class='MantraNumbering'>{16/32}{7.2.16.1}{9.67.16}{9.3.7.16}{790, 8284}</span></td>
+<td class='VargaStyle2'>പവ॑സ്വ സോമ മ॒ന്ദയ॒ന്നിന്ദ്രാ᳚യ॒ മധു॑മത്തമഃ ||<span class='RishiDevChandas'>{ജമദഗ്നിഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span><span class='MantraNumbering'>{16/32}{7.2.16.1}{9.67.16}{9.3.7.16}{790, 8284}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>അസൃ॑ഗ്രൻ‌ ദേ॒വവീ᳚തയേ വാജ॒യന്തോ॒ രഥാ᳚, ഇവ ||<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span><span class='MantraNumbering'>{17/32}{7.2.16.2}{9.67.17}{9.3.7.17}{790, 8285}</span></td>
+<td class='VargaStyle2'>അസൃ॑ഗ്രൻ‌ ദേ॒വവീ᳚തയേ വാജ॒യന്തോ॒ രഥാ᳚, ഇവ ||<span class='RishiDevChandas'>{ജമദഗ്നിഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span><span class='MantraNumbering'>{17/32}{7.2.16.2}{9.67.17}{9.3.7.17}{790, 8285}</span></td>
 </tr>
 <tr>
-<td class='VargaStyle2'>തേ സു॒താസോ᳚ മ॒ദിന്ത॑മാഃ ശു॒ക്രാ വാ॒യുമ॑സൃക്ഷത ||<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span><span class='MantraNumbering'>{18/32}{7.2.16.3}{9.67.18}{9.3.7.18}{790, 8286}</span></td>
+<td class='VargaStyle2'>തേ സു॒താസോ᳚ മ॒ദിന്ത॑മാഃ ശു॒ക്രാ വാ॒യുമ॑സൃക്ഷത ||<span class='RishiDevChandas'>{ജമദഗ്നിഃ | പവമാനഃ സോമഃ | ദ്വിപദാ ഗായത്രീ}</span><span class='MantraNumbering'>{18/32}{7.2.16.3}{9.67.18}{9.3.7.18}{790, 8286}</span></td>
 </tr>
 <tr>
 <td class='VargaStyle2'>ഗ്രാവ്ണാ᳚ തു॒ന്നോ, അ॒ഭിഷ്ടു॑തഃ പ॒വിത്രം᳚ സോമ ഗച്ഛസി |<span class='RishiDevChandas'>{ആംഗിരസഃ പവിത്രഃ | പവമാനഃ സോമഃ | ഗായത്രീ}</span><p>ദധ॑ത്‌ സ്തോ॒ത്രേ സു॒വീര്യം᳚ ||<span class='MantraNumbering'>{19/32}{7.2.16.4}{9.67.19}{9.3.7.19}{790, 8287}</span></td>
